--- a/shah/translations/es_ES.json
+++ b/shah/translations/es_ES.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Felicidades",
-  "Qsqy": "Ha creado su perfil correctamente. Ahora está listo para continuar su viaje en Origin Marketplace.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "Dirección ETH",
   "1SGynn": "Contacto {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "El icono de Metamask se encuentra en la parte superior derecha de la barra de herramientas del navegador.",
   "32hLtQ": "¡Felicidades! Ahora puede enviar mensajes a otros usuarios en Origin y mantenerse al día con todas sus compras y ventas.",
   "AACIs": "Ya ha terminado y puede continuar presionando el botón de abajo.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Campaña de enero de 2019",
     "growth.jan2019.short_name": "Ene 2019",
     "growth.feb2019.name": "Campaña de febrero de 2019",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Octubre de 2019",
     "growth.nov2019.name": "Campaña de noviembre de 2019",
     "growth.nov2019.short_name": "Noviembre 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Correo electrónico verificado y perfil de origen",
-    "growth.two.attestations.requirement": "Dos verificaciones de perfil",
-    "growth.three.attestations.requirement": "Tres verificaciones de perfil",
+    "growth.two.attestations.requirement": "Tres verificaciones de perfil",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Nombre de perfil y foto",
     "growth.email.requirement": "Correo electrónico verificado",
     "growth.attestation.requirement.twitterAttestation": "Certificado de Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Leer el artículo",
     "growth.share.content20.title": "El fundador de CoinList habla sobre los mercados descentralizados del futuro",
     "growth.share.content20.details": "Andy Bromberg, cofundador y presidente de CoinList, analiza lo que piensa de Origin y nuestra visión a largo plazo.",
-    "growth.share.content20.link": "Ver el vídeo"
+    "growth.share.content20.link": "Ver el vídeo",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Leer el artículo",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Ver el vídeo",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Leer el artículo",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Ver el vídeo",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Ver el vídeo"
   },
   "3eD99i": "Verifique su dirección de correo electrónico",
   "1hBrwm": "Agregar nombre y foto al perfil",
@@ -321,7 +342,7 @@
   "4qOByY": "Ganado",
   "3lytDE": "DESTACADOS",
   "2dj9Ax": "Descargue la aplicación Origin Marketplace",
-  "2PC2yI": "Instala y completa 3 verificaciones para ganar",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Compartir este",
   "1jzK6G": "No se detectaron campañas",
   "1bzhfq": "No se ha encontrado ninguna campaña activa",
@@ -633,6 +654,7 @@
   "1YUe0g": "Total de Ganancias",
   "2tRIOg": "No se detectaron campañas",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Ganaste {amount} OGN",
   "1dhANo": "Seguir origen",
@@ -677,10 +699,6 @@
   "2jOW7": "Enviar invitaciones",
   "2AJXmZ": "Seguimiento de invitaciones",
   "P2wju": "Problemas para inscribirse en la campaña de crecimiento.",
-  "3YvZxn": "Firma del mensaje sin éxito",
-  "3oF2k2": "Su navegador no soporta la etiqueta de vídeo.",
-  "20MH6p": "Confirmar la firma de Metamask",
-  "LquQ9": "Abra la extensión de su navegador Metamask y confirme su firma.",
   "4wsD7C": "Ganaste {amount} OGN",
   "4gJCWE": "Terminado",
   "NZJzc": "Promover origen",
@@ -739,6 +757,7 @@
   "157nkC": "Los OGN ganados se distribuirán al final de cada campaña. Actualmente, OGN está bloqueado para su uso en la plataforma Origin y no se puede transferir. Se espera que OGN sea desbloqueado y transferible en el futuro.",
   "4weJUD": "Al unirse al programa de recompensas de Origin, acepta que no transferirá ni venderá tokens de Origin ganados en el futuro a otros por al menos 1 año desde la fecha de obtención de sus tokens.",
   "4vRJSg": "OGN se emiten en una transacción originalmente exenta de registro bajo la Ley de Valores de los Estados Unidos de 1933, según enmendada (la \"Ley de Valores\"), y no pueden transferirse en los Estados Unidos a, o para la cuenta o beneficio de, ningún Estado de los Estados Unidos. persona, excepto en virtud de una exención disponible de los requisitos de registro de la Ley de Valores y todas las leyes estatales de valores aplicables. Los términos utilizados anteriormente tienen el significado que se les da en la Regulación S bajo la Ley de Valores y todas las leyes y regulaciones aplicables.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Acepto los términos y condiciones",
   "3ARgQ2": "Vaya, {country} no es elegible",
   "1gZxpn": "Desafortunadamente, parece que actualmente se encuentra en un país donde las regulaciones gubernamentales no le permiten participar en las Campañas de Origen.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verificar Cuenta",
   "4hTtL9": "Verifique su cuenta de Telegram",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nunca publicaremos en su nombre.",
   "2Ezyas": "¿Qué será visible en la cadena de bloques?",
   "44w6ur": "Su nombre de usuario de Telegram y su ID de cuenta",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificar sitio web",
   "vyn8P": "Ingrese la URL de su sitio web a continuación",
   "2DQDJG": "¿Qué será visible en la cadena de bloques?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "No podrá ganar OGN en Origin, pero aún puede verificar su perfil.",
   "BfHYB": "Estoy seguro",
   "eXPPI": "No, espera",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Gane tokens de origen (OGN) fortaleciendo su perfil y completando tareas en Origin Marketplace.",
   "3JfvSq": "¡Si! Inscríbeme",
   "wcJnW": "No, gracias",
