--- a/shah/translations/nl_NL.json
+++ b/shah/translations/nl_NL.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Gefeliciteerd",
-  "Qsqy": "Je hebt je profiel succesvol aangemaakt. Je bent nu klaar om je reis voort te zetten in de Origin Marketplace.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "OK",
   "yzJlS": "ETH adres",
   "1SGynn": "Contact {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Het Metamask-pictogram bevindt zich rechtsboven in de browserwerkbalk.",
   "32hLtQ": "Gefeliciteerd! Je kunt nu andere gebruikers op Origin laten weten en op de hoogte blijven van al je aankopen en verkopen.",
   "AACIs": "U bent klaar en kunt doorgaan door op de onderstaande knop te drukken.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "2019 campagne",
     "growth.jan2019.short_name": "Januari 2019",
     "growth.feb2019.name": "Februari 2019 Campagne",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Oktober 2019",
     "growth.nov2019.name": "Campagne november 2019",
     "growth.nov2019.short_name": "November 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Geverifieerd e-mailadres en herkomstprofiel",
-    "growth.two.attestations.requirement": "Twee profielverificaties",
-    "growth.three.attestations.requirement": "Drie profielverificaties",
+    "growth.two.attestations.requirement": "Drie profielverificaties",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Profielnaam en foto",
     "growth.email.requirement": "Geverifieerd e-mailadres",
     "growth.attestation.requirement.twitterAttestation": "Twitter-attest",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Lees het artikel",
     "growth.share.content20.title": "Oprichter van CoinList bespreekt gedecentraliseerde markten van de toekomst",
     "growth.share.content20.details": "Andy Bromberg, mede-oprichter en president van CoinList bespreekt wat hij denkt over Origin en onze langetermijnvisie.",
-    "growth.share.content20.link": "Bekijk de video"
+    "growth.share.content20.link": "Bekijk de video",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Lees het artikel",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Bekijk de video",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Lees het artikel",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Bekijk de video",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Bekijk de video"
   },
   "3eD99i": "Verifieer je e-mailadres",
   "1hBrwm": "Naam en foto toevoegen aan profiel",
@@ -321,7 +342,7 @@
   "4qOByY": "verdiende",
   "3lytDE": "AANBEVOLEN",
   "2dj9Ax": "Download de Origin Marketplace-app",
-  "2PC2yI": "Installeer en voltooi 3 verificaties om te verdienen",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Deel dit",
   "1jzK6G": "Geen campagnes gedetecteerd",
   "1bzhfq": "Geen actieve campagne gevonden",
@@ -633,6 +654,7 @@
   "1YUe0g": "Totaal verdiend",
   "2tRIOg": "Geen campagnes gedetecteerd",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "U heeft {amount} OGN verdiend",
   "1dhANo": "Volg Origin",
@@ -677,10 +699,6 @@
   "2jOW7": "Uitnodigingen versturen",
   "2AJXmZ": "Volg uitnodigingen",
   "P2wju": "Problemen om deel te nemen aan groeicampagne.",
-  "3YvZxn": "Bericht handtekening mislukt",
-  "3oF2k2": "Uw browser ondersteunt de videotag niet.",
-  "20MH6p": "Bevestig metamask-handtekening",
-  "LquQ9": "Open uw Metamask-browserextensie en bevestig uw handtekening.",
   "4wsD7C": "U heeft {amount} OGN verdiend",
   "4gJCWE": "Voltooid",
   "NZJzc": "Oorsprong promoten",
@@ -739,6 +757,7 @@
   "157nkC": "Earned OGN wordt aan het einde van elke campagne verspreid. OGN is momenteel vergrendeld voor gebruik op het Origin-platform en kan niet worden overgedragen. Naar verwachting zal OGN in de toekomst worden ontgrendeld en overdraagbaar zijn.",
   "4weJUD": "Door deel te nemen aan het Origin-beloningsprogramma, stemt u ermee in dat u toekomstige verdiende Origin-tokens niet zult overdragen of verkopen aan anderen gedurende ten minste 1 jaar vanaf de datum van het verdienen van uw tokens.",
   "4vRJSg": "OGN worden uitgegeven in een transactie die oorspronkelijk is vrijgesteld van registratie onder de US Securities Act van 1933, zoals gewijzigd (de 'Securities Act'), en mag niet worden overgedragen in de Verenigde Staten naar, of voor rekening of voordeel van, enige VS persoon behalve op basis van een beschikbare vrijstelling van de registratievereisten van de Securities Act en alle toepasselijke staatswetgeving inzake effecten. De hierboven gebruikte termen hebben de betekenis die eraan wordt gegeven in Regulation S onder de Securities Act en alle toepasselijke wet- en regelgeving.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Ik accepteer de algemene voorwaarden",
   "3ARgQ2": "Oeps, {country} komt niet in aanmerking",
   "1gZxpn": "Helaas lijkt het erop dat u zich momenteel in een land bevindt waar overheidsregels u niet toestaan deel te nemen aan Origin Campaigns.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifieer Account",
   "4hTtL9": "Verifieer uw Telegram-account",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "We zullen nooit namens u posten.",
   "2Ezyas": "Wat zal zichtbaar zijn op de blockchain?",
   "44w6ur": "Uw Telegram-gebruikersnaam en account-ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Controleer website",
   "vyn8P": "Voer hieronder uw website-URL in",
   "2DQDJG": "Wat zal zichtbaar zijn op de blockchain?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Je kunt geen OGN verdienen op Origin, maar je kunt je profiel wel verifiëren.",
   "BfHYB": "Ik weet het zeker",
   "eXPPI": "Nee wacht",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Verdien Origin Tokens (OGN) door je profiel te versterken en taken in de Origin Marketplace te voltooien.",
   "3JfvSq": "Ja! Schrijf me in",
   "wcJnW": "Nee bedankt",
