--- a/shah/translations/pt_PT.json
+++ b/shah/translations/pt_PT.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Parabéns",
-  "Qsqy": "Você criou seu perfil com sucesso Agora você está pronto para continuar sua jornada no Origin Marketplace.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Está bem",
   "yzJlS": "Endereço ETH",
   "1SGynn": "Contato {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "O ícone do Metamask está localizado no canto superior direito da barra de ferramentas do navegador.",
   "32hLtQ": "Parabéns! Agora você pode enviar mensagens para outros usuários no Origin e manter-se atualizado com todas as suas compras e vendas.",
   "AACIs": "Você está pronto e pode continuar pressionando o botão abaixo.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Campanha de janeiro de 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campanha de fevereiro de 2019",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Outubro 2019",
     "growth.nov2019.name": "Campanha novembro de 2019",
     "growth.nov2019.short_name": "Novembro 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "E-mail confirmado e perfil de origem",
-    "growth.two.attestations.requirement": "Duas verificações de perfil",
-    "growth.three.attestations.requirement": "Três verificações de perfil",
+    "growth.two.attestations.requirement": "Três verificações de perfil",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Nome e foto do perfil",
     "growth.email.requirement": "E-mail confirmado",
     "growth.attestation.requirement.twitterAttestation": "Atestado do Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Leia o artigo",
     "growth.share.content20.title": "Fundador da CoinList discute mercados descentralizados do futuro",
     "growth.share.content20.details": "Andy Bromberg, co-fundador e presidente da CoinList discute o que ele pensa da Origin e nossa visão de longo prazo.",
-    "growth.share.content20.link": "Assista o vídeo"
+    "growth.share.content20.link": "Assista o vídeo",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Leia o artigo",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Assista o vídeo",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Leia o artigo",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Assista o vídeo",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Assista o vídeo"
   },
   "3eD99i": "Verifique seu endereço de e-mail",
   "1hBrwm": "Adicionar nome e foto ao perfil",
@@ -321,7 +342,7 @@
   "4qOByY": "Ganhou",
   "3lytDE": "DESTAQUE",
   "2dj9Ax": "Baixe o aplicativo Origin Marketplace",
-  "2PC2yI": "Instale e complete 3 verificações para ganhar",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Compartilhar isso",
   "1jzK6G": "Nenhuma campanha detectada",
   "1bzhfq": "Nenhuma campanha ativa encontrada",
@@ -633,6 +654,7 @@
   "1YUe0g": "Total ganho",
   "2tRIOg": "Nenhuma campanha detectada",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Você ganhou {amount} OGN",
   "1dhANo": "Seguir Origem",
@@ -677,10 +699,6 @@
   "2jOW7": "Enviar convites",
   "2AJXmZ": "Trilha Convites",
   "P2wju": "Problemas ao se inscrever na campanha de crescimento.",
-  "3YvZxn": "Assinatura da mensagem malsucedida",
-  "3oF2k2": "Seu navegador não suporta a tag de vídeo.",
-  "20MH6p": "Confirmar assinatura Metamask",
-  "LquQ9": "Abra a extensão do navegador Metamask e confirme sua assinatura.",
   "4wsD7C": "Você ganhou {amount} OGN",
   "4gJCWE": "Concluído",
   "NZJzc": "Promover a Origem",
@@ -739,6 +757,7 @@
   "157nkC": "OGN ganho será distribuído no final de cada campanha. Atualmente, o OGN está bloqueado para uso na plataforma Origin e não pode ser transferido. Espera-se que o OGN seja desbloqueado e transferível no futuro.",
   "4weJUD": "Ao ingressar no programa de recompensas Origin, você concorda em não transferir ou vender tokens Origin ganhos para outros por pelo menos 1 ano a partir da data de obtenção dos tokens.",
   "4vRJSg": "OGN está sendo emitido em uma transação originalmente isenta de registro nos termos da US Securities Act de 1933, conforme alterada (a \"Securities Act\"), e não pode ser transferida nos Estados Unidos para, ou por conta ou benefício de qualquer US pessoa, exceto de acordo com uma isenção disponível dos requisitos de registro da Lei de Valores Mobiliários e de todas as leis estaduais aplicáveis. Os termos usados acima têm o significado que lhes é atribuído no Regulamento S, de acordo com a Lei de Valores Mobiliários e todas as leis e regulamentos aplicáveis.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "eu aceito os termos e condições",
   "3ARgQ2": "Ops, {country} não é elegível",
   "1gZxpn": "Infelizmente, parece que você está em um país onde as regulamentações governamentais não permitem a participação em campanhas de origem.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verificar conta",
   "4hTtL9": "Verifique sua conta de telegrama",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nós nunca publicaremos em seu nome.",
   "2Ezyas": "O que será visível na blockchain?",
   "44w6ur": "Seu nome de usuário e ID da conta do Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificar site",
   "vyn8P": "Digite o URL do site abaixo",
   "2DQDJG": "O que será visível na blockchain?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Você não poderá ganhar OGN no Origin, mas ainda pode verificar seu perfil.",
   "BfHYB": "Tenho certeza",
   "eXPPI": "Não espera",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Ganhe tokens de origem (OGN) fortalecendo seu perfil e concluindo tarefas no Origin Marketplace.",
   "3JfvSq": "Sim! Inscreva-me",
   "wcJnW": "Não, obrigado",
