--- a/shah/translations/th_TH.json
+++ b/shah/translations/th_TH.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "ขอแสดงความยินดี",
-  "Qsqy": "คุณสร้างโปรไฟล์สำเร็จแล้วคุณพร้อมที่จะเดินทางต่อในตลาดกำเนิด",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "ตกลง",
   "yzJlS": "ที่อยู่ ETH",
   "1SGynn": "ติดต่อ {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "ไอคอน Metamask ตั้งอยู่ที่ด้านบนขวาของแถบเครื่องมือเบราว์เซอร์ของคุณ",
   "32hLtQ": "ขอแสดงความยินดี! ตอนนี้คุณสามารถส่งข้อความถึงผู้ใช้คนอื่นบน Origin และติดตามข่าวสารเกี่ยวกับการซื้อและการขายทั้งหมดของคุณ",
   "AACIs": "คุณทำเสร็จแล้วและสามารถดำเนินการต่อได้โดยกดปุ่มด้านล่าง",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "แคมเปญมกราคม 2562",
     "growth.jan2019.short_name": "ม.ค. 2019",
     "growth.feb2019.name": "แคมเปญกุมภาพันธ์ 2019",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "ตุลาคม 2562",
     "growth.nov2019.name": "แคมเปญพฤศจิกายน 2562",
     "growth.nov2019.short_name": "พฤศจิกายน 2562",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "ยืนยันอีเมลและโปรไฟล์ Origin แล้ว",
-    "growth.two.attestations.requirement": "การยืนยันสองโปรไฟล์",
-    "growth.three.attestations.requirement": "การตรวจสอบสามโปรไฟล์",
+    "growth.two.attestations.requirement": "การตรวจสอบสามโปรไฟล์",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "ชื่อและรูปถ่าย",
     "growth.email.requirement": "ยืนยันอีเมลแล้ว",
     "growth.attestation.requirement.twitterAttestation": "การยืนยันของ Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "อ่านบทความ",
     "growth.share.content20.title": "ผู้ก่อตั้ง CoinList พูดถึงตลาดที่กระจายอำนาจแห่งอนาคต",
     "growth.share.content20.details": "Andy Bromberg ผู้ร่วมก่อตั้งและประธาน CoinList พูดถึงสิ่งที่เขาคิดใน Origin และวิสัยทัศน์ระยะยาวของเรา",
-    "growth.share.content20.link": "ดูวิดีโอ"
+    "growth.share.content20.link": "ดูวิดีโอ",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "อ่านบทความ",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "ดูวิดีโอ",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "อ่านบทความ",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "ดูวิดีโอ",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "ดูวิดีโอ"
   },
   "3eD99i": "ยืนยันที่อยู่อีเมลของคุณ",
   "1hBrwm": "เพิ่มชื่อและรูปภาพในโปรไฟล์",
@@ -321,7 +342,7 @@
   "4qOByY": "ที่ได้รับ",
   "3lytDE": "FEATURED",
   "2dj9Ax": "ดาวน์โหลดแอพ Origin Marketplace",
-  "2PC2yI": "ติดตั้งและตรวจสอบ 3 อย่างเพื่อรับ",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "แชร์สิ่งนี้",
   "1jzK6G": "ไม่พบแคมเปญ",
   "1bzhfq": "ไม่พบแคมเปญที่ใช้งานอยู่",
@@ -633,6 +654,7 @@
   "1YUe0g": "รวมรายได้",
   "2tRIOg": "ไม่พบแคมเปญ",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "คุณได้รับ {amount} OGN",
   "1dhANo": "ติดตามแหล่งกำเนิด",
@@ -677,10 +699,6 @@
   "2jOW7": "ส่งคำเชิญ",
   "2AJXmZ": "ติดตามคำเชิญ",
   "P2wju": "ปัญหาการลงทะเบียนในแคมเปญการเติบโต",
-  "3YvZxn": "ลายเซ็นข้อความไม่สำเร็จ",
-  "3oF2k2": "เบราว์เซอร์ของคุณไม่รองรับแท็กวิดีโอ",
-  "20MH6p": "ยืนยันลายเซ็น Metamask",
-  "LquQ9": "เปิดส่วนขยายเบราว์เซอร์ Metamask ของคุณและยืนยันลายเซ็นของคุณ",
   "4wsD7C": "คุณได้รับ {amount} OGN",
   "4gJCWE": "เสร็จ",
   "NZJzc": "ส่งเสริมแหล่งกำเนิด",
@@ -739,6 +757,7 @@
   "157nkC": "OGN ที่ได้รับจะถูกแจกจ่ายเมื่อสิ้นสุดแต่ละแคมเปญ ปัจจุบัน OGN ถูกล็อคสำหรับการใช้งานบนแพลตฟอร์ม Origin และไม่สามารถถ่ายโอนได้ คาดว่า OGN จะปลดล็อคและถ่ายโอนได้ในอนาคต",
   "4weJUD": "ในการเข้าร่วมโปรแกรมผลตอบแทน Origin คุณยอมรับว่าคุณจะไม่โอนหรือขายโทเค็น Origin ที่ได้รับในอนาคตให้กับผู้อื่นเป็นเวลาอย่างน้อย 1 ปีนับจากวันที่รับโทเค็นของคุณ",
   "4vRJSg": "OGN กำลังออกธุรกรรมโดยเดิมได้รับการยกเว้นจากการลงทะเบียนภายใต้พระราชบัญญัติหลักทรัพย์ของสหรัฐอเมริกาปี 1933 ซึ่งแก้ไขเพิ่มเติม (“ พระราชบัญญัติหลักทรัพย์”) และไม่สามารถโอนในประเทศสหรัฐอเมริกาไปยังหรือเพื่อบัญชีหรือผลประโยชน์ของสหรัฐฯใด ๆ บุคคลยกเว้นตามข้อยกเว้นที่มีอยู่จากข้อกำหนดการลงทะเบียนของพระราชบัญญัติหลักทรัพย์และกฎหมายหลักทรัพย์ของรัฐที่บังคับใช้ทั้งหมด ข้อกำหนดที่ใช้ข้างต้นมีความหมายที่กำหนดไว้ในข้อบังคับ S ภายใต้พระราชบัญญัติหลักทรัพย์และกฎหมายและข้อบังคับที่เกี่ยวข้องทั้งหมด",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "ฉันยอมรับข้อกำหนดและเงื่อนไขต่างๆ",
   "3ARgQ2": "โอ๊ะโอ {country} ไม่มีสิทธิ์",
   "1gZxpn": "น่าเสียดายที่ดูเหมือนว่าคุณกำลังอยู่ในประเทศที่กฎระเบียบของรัฐบาลไม่อนุญาตให้คุณมีส่วนร่วมในแคมเปญต้นทาง",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "ตรวจสอบบัญชี",
   "4hTtL9": "ยืนยันบัญชีโทรเลขของคุณ",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "เราจะไม่โพสต์ในนามของคุณ",
   "2Ezyas": "สิ่งที่จะปรากฏบนบล็อกเชน",
   "44w6ur": "ชื่อผู้ใช้และ ID บัญชีโทรเลขของคุณ",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "ยืนยันเว็บไซต์",
   "vyn8P": "ป้อน URL เว็บไซต์ของคุณด้านล่าง",
   "2DQDJG": "สิ่งที่จะปรากฏบนบล็อกเชน",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "คุณจะไม่สามารถรับ OGN บน Origin ได้ แต่คุณยังสามารถยืนยันโปรไฟล์ของคุณได้",
   "BfHYB": "ฉันแน่ใจ",
   "eXPPI": "ไม่รอ",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "รับโทเค็นต้นทาง (OGN) โดยเพิ่มความแข็งแกร่งให้กับโปรไฟล์ของคุณและทำงานให้สำเร็จใน Origin Marketplace",
   "3JfvSq": "ใช่ สมัครเลย",
   "wcJnW": "ไม่เป็นไรขอบคุณ",
