--- a/shah/translations/uk_UA.json
+++ b/shah/translations/uk_UA.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Вітаю",
-  "Qsqy": "Ви успішно створили свій профіль. Тепер ви готові продовжити свою подорож на ринку оригіналів.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Гаразд",
   "yzJlS": "Адреса ETH",
   "1SGynn": "Контакт {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Значок Metamask розташований у верхньому правому куті панелі інструментів веб-переглядача.",
   "32hLtQ": "Вітаємо! Тепер ви можете надсилати повідомлення іншим користувачам про Origin і залишатися в курсі всіх ваших покупок і продажів.",
   "AACIs": "Ви закінчили і можете продовжити, натиснувши кнопку нижче.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Кампанія в січні 2019 року",
     "growth.jan2019.short_name": "Січня 2019",
     "growth.feb2019.name": "Акція лютого 2019 року",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Жовтень 2019 року",
     "growth.nov2019.name": "Листопад 2019 року",
     "growth.nov2019.short_name": "Листопад 2019 року",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Підтверджена електронна пошта й профіль Origin",
-    "growth.two.attestations.requirement": "Дві перевірки профілю",
-    "growth.three.attestations.requirement": "Три перевірки профілю",
+    "growth.two.attestations.requirement": "Три перевірки профілю",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Ім'я профілю та фотографія",
     "growth.email.requirement": "Підтверджена електронна пошта",
     "growth.attestation.requirement.twitterAttestation": "Атестація у Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Прочитати статтю",
     "growth.share.content20.title": "Засновник CoinList обговорює децентралізовані ринки майбутнього",
     "growth.share.content20.details": "Енді Бромберг, співзасновник та президент CoinList, обговорює, що він думає про походження та наше довгострокове бачення.",
-    "growth.share.content20.link": "Подивіться відео"
+    "growth.share.content20.link": "Подивіться відео",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Прочитати статтю",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Подивіться відео",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Прочитати статтю",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Подивіться відео",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Подивіться відео"
   },
   "3eD99i": "Перевірте свою адресу електронної пошти",
   "1hBrwm": "Додайте ім’я та фотографію до профілю",
@@ -321,7 +342,7 @@
   "4qOByY": "Зароблені",
   "3lytDE": "ОСОБЛИВО",
   "2dj9Ax": "Завантажте додаток Origin Marketplace",
-  "2PC2yI": "Встановіть і заповніть 3 перевірки, щоб заробити",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Поділитися цим",
   "1jzK6G": "Не виявлено жодної кампанії",
   "1bzhfq": "Не знайдено жодної активної кампанії",
@@ -633,6 +654,7 @@
   "1YUe0g": "Усього заробленого",
   "2tRIOg": "Не виявлено жодної кампанії",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Ви заробили {amount} ОГН",
   "1dhANo": "Дотримуйтесь походження",
@@ -677,10 +699,6 @@
   "2jOW7": "Надсилайте запрошення",
   "2AJXmZ": "Відстежуйте запрошення",
   "P2wju": "Проблеми при вступі до кампанії з росту.",
-  "3YvZxn": "Підпис повідомлення не вдався",
-  "3oF2k2": "Ваш веб-переглядач не підтримує відеотег.",
-  "20MH6p": "Підтвердити підпис метамаски",
-  "LquQ9": "Відкрийте розширення браузера Metamask і підтвердьте свій підпис.",
   "4wsD7C": "Ви заробили {amount} ОГН",
   "4gJCWE": "Завершено",
   "NZJzc": "Популяризація походження",
@@ -739,6 +757,7 @@
   "157nkC": "Зароблені OGN будуть розподілятися в кінці кожної кампанії. Наразі OGN заблокований для використання на платформі Origin і його неможливо перенести. Очікується, що OGN буде розблоковано та передано в майбутньому.",
   "4weJUD": "Приєднавшись до програми нагород Origin, ви погоджуєтесь, що не будете передавати або продавати майбутні зароблені жетони Origin іншим принаймні 1 рік з дня отримання ваших жетонів.",
   "4vRJSg": "OGN випускаються в рамках трансакції, спочатку звільненої від реєстрації згідно із Законом про цінні папери США 1933 року із змінами («Закон про цінні папери») і не можуть бути передані в Сполучених Штатах, або на рахунок або користь будь-яких США особа, за винятком наявного звільнення від вимог реєстрації Закону про цінні папери та всіх застосовних законів про державні цінні папери. Терміни, які використовуються вище, мають значення, які їм надано у Положенні S згідно із Законом про цінні папери та у всіх чинних законах та нормативних актах.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Я приймаю умови та положення",
   "3ARgQ2": "На жаль, {country} не підходить",
   "1gZxpn": "На жаль, наразі, схоже, ви перебуваєте в країні, де державні правила не дозволяють брати участь у кампанії з походженням.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Підтвердити рахунок",
   "4hTtL9": "Підтвердьте свій обліковий запис Telegram",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Ми ніколи не публікуємо від вашого імені.",
   "2Ezyas": "Що буде видно на блокчейні?",
   "44w6ur": "Ваше ім’я користувача та ідентифікатор облікового запису Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Підтвердити веб-сайт",
   "vyn8P": "Введіть URL-адресу свого веб-сайту нижче",
   "2DQDJG": "Що буде видно на блокчейні?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Ви не зможете заробляти OGN на Origin, але ви все одно можете підтвердити свій профіль.",
   "BfHYB": "я впевнений",
   "eXPPI": "Ні, чекай",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Заробляйте маркери для початківців (OGN), зміцнюючи свій профіль та виконуючи завдання на ринку оригіналів.",
   "3JfvSq": "Так! Підпишіться на мене",
   "wcJnW": "Ні, дякую",
