--- a/shah/translations/zh_TW.json
+++ b/shah/translations/zh_TW.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "恭喜啦",
-  "Qsqy": "您已經成功創建了個人資料，現在可以繼續在Origin Marketplace中繼續您的旅程了。",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "好",
   "yzJlS": "ETH地址",
   "1SGynn": "聯繫 {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Metamask圖標位於瀏覽器工具欄的右上角。",
   "32hLtQ": "恭喜！您現在可以在Origin上向其他用戶發送消息，並及時了解您的所有購買和銷售情況。",
   "AACIs": "您已完成，可以按下面的按鈕繼續。",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "2019年1月運動",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月運動",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "2019年十月",
     "growth.nov2019.name": "2019年11月活動",
     "growth.nov2019.short_name": "2019年十一月",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "已驗證的電子郵件和原始資",
-    "growth.two.attestations.requirement": "兩次個人資料驗證",
-    "growth.three.attestations.requirement": "三份個人資料驗證",
+    "growth.two.attestations.requirement": "三份個人資料驗證",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "個人資料名稱和照片",
     "growth.email.requirement": "已驗證電郵",
     "growth.attestation.requirement.twitterAttestation": "Twitter證明",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "閱讀文章",
     "growth.share.content20.title": "CoinList創始人討論未來的去中心化市場",
     "growth.share.content20.details": "CoinList的聯合創始人兼總裁Andy Bromberg討論了他對Origin的看法以及我們的長期願景。",
-    "growth.share.content20.link": "觀看視頻"
+    "growth.share.content20.link": "觀看視頻",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "閱讀文章",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "觀看視頻",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "閱讀文章",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "觀看視頻",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "觀看視頻"
   },
   "3eD99i": "確認你的郵件地址",
   "1hBrwm": "將姓名和照片添加到個人資料",
@@ -321,7 +342,7 @@
   "4qOByY": "掙",
   "3lytDE": "精選",
   "2dj9Ax": "下載Origin Marketplace應用",
-  "2PC2yI": "安裝並完成3個驗證即可賺錢",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "分享這個",
   "1jzK6G": "未檢測到廣告活動",
   "1bzhfq": "找不到有效的廣告活動",
@@ -633,6 +654,7 @@
   "1YUe0g": "總收入",
   "2tRIOg": "未檢測到廣告活動",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "您獲得了 {amount} OGN",
   "1dhANo": "跟隨起源",
@@ -677,10 +699,6 @@
   "2jOW7": "發送邀請",
   "2AJXmZ": "追踪邀請",
   "P2wju": "加入成長運動的問題。",
-  "3YvZxn": "郵件簽名失敗",
-  "3oF2k2": "您的瀏覽器不支持視頻標籤。",
-  "20MH6p": "確認元掩碼簽名",
-  "LquQ9": "打開您的Metamask瀏覽器擴展程序並確認您的簽名。",
   "4wsD7C": "您獲得了 {amount} OGN",
   "4gJCWE": "已完成",
   "NZJzc": "促進起源",
@@ -739,6 +757,7 @@
   "157nkC": "贏得的OGN將在每個活動結束時分發。 OGN當前在Origin平台上被鎖定以供使用，並且無法轉讓。預計OGN將在未來解鎖並轉讓。",
   "4weJUD": "通過加入Origin獎勵計劃，您同意從賺取代幣之日起至少一年內不會將未來賺取的Origin代幣轉讓或出售給其他人。",
   "4vRJSg": "OGN最初是根據1933年《美國證券法》（經修訂）（“證券法”）免予註冊的交易中發行的，不得在美國轉讓給任何美國或為任何美國的帳戶或利益轉讓除非根據《證券法》和所有適用的州證券法的註冊要求可獲豁免。上面使用的術語具有《證券法》第S條和所有適用法律和法規賦予它們的含義。",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "我接受這些條款和條件",
   "3ARgQ2": "糟糕， {country} 不符合條件",
   "1gZxpn": "不幸的是，您似乎目前處於一個政府法規不允許您參與Origin Campaigns的國家/地區。",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "驗證賬戶",
   "4hTtL9": "驗證您的電報帳戶",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "我們將永遠不會代表您發帖。",
   "2Ezyas": "在區塊鏈上將看到什麼？",
   "44w6ur": "您的電報用戶名和帳戶ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "驗證網站",
   "vyn8P": "在下面輸入您的網站網址",
   "2DQDJG": "在區塊鏈上將看到什麼？",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "您將無法在Origin上獲得OGN，但仍可以驗證您的個人資料。",
   "BfHYB": "我確定",
   "eXPPI": "不，等等",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "通過增強您的個人資料並在Origin Marketplace中完成任務來賺取Origin Token（OGN）。",
   "3JfvSq": "是!註冊我",
   "wcJnW": "不用了，謝謝",
