--- a/shah/translations/de_DE.json
+++ b/shah/translations/de_DE.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Herzliche Glückwünsche",
-  "Qsqy": "Sie haben Ihr Profil erfolgreich erstellt. Jetzt können Sie Ihre Reise auf dem Origin-Marktplatz fortsetzen.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Okay",
   "yzJlS": "ETH-Adresse",
   "1SGynn": "Kontakt {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Das Metamask-Symbol befindet sich oben rechts in der Symbolleiste Ihres Browsers.",
   "32hLtQ": "Herzliche Glückwünsche! Sie können jetzt anderen Benutzern bei Origin eine Nachricht senden und über alle Ihre Einkäufe und Verkäufe auf dem Laufenden bleiben.",
   "AACIs": "Sie sind fertig und können fortfahren, indem Sie die Taste unten drücken.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Januar 2019 Kampagne",
     "growth.jan2019.short_name": "Januar 2019",
     "growth.feb2019.name": "Februar 2019 Kampagne",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Oktober 2019",
     "growth.nov2019.name": "Kampagne November 2019",
     "growth.nov2019.short_name": "November 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Bestätigte E-Mail- und Origin-Profile",
-    "growth.two.attestations.requirement": "Zwei Profilüberprüfungen",
-    "growth.three.attestations.requirement": "Drei Profilüberprüfungen",
+    "growth.two.attestations.requirement": "Drei Profilüberprüfungen",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Profilname und Foto",
     "growth.email.requirement": "Bestätigte E-Mail",
     "growth.attestation.requirement.twitterAttestation": "Twitter-Bestätigung",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Lesen Sie den Artikel",
     "growth.share.content20.title": "Gründer von CoinList spricht über dezentrale Marktplätze der Zukunft",
     "growth.share.content20.details": "Andy Bromberg, Mitbegründer und Präsident von CoinList, diskutiert, was er von Origin und unserer langfristigen Vision hält.",
-    "growth.share.content20.link": "Schau das Video"
+    "growth.share.content20.link": "Schau das Video",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Lesen Sie den Artikel",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Schau das Video",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Lesen Sie den Artikel",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Schau das Video",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Schau das Video"
   },
   "3eD99i": "Bestätige deine Email-Adresse",
   "1hBrwm": "Füge dem Profil einen Namen und ein Foto hinzu",
@@ -321,7 +342,7 @@
   "4qOByY": "Verdient",
   "3lytDE": "AUSGEWÄHLT",
   "2dj9Ax": "Laden Sie die Origin Marketplace-App herunter",
-  "2PC2yI": "Installieren Sie und führen Sie 3 Überprüfungen durch, um zu verdienen",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Teile das",
   "1jzK6G": "Keine Kampagnen gefunden",
   "1bzhfq": "Keine aktive Kampagne gefunden",
@@ -633,6 +654,7 @@
   "1YUe0g": "Insgesamt verdient",
   "2tRIOg": "Keine Kampagnen gefunden",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Du hast {amount} OGN verdient",
   "1dhANo": "Folgen Sie Origin",
@@ -677,10 +699,6 @@
   "2jOW7": "Einladungen verschicken",
   "2AJXmZ": "Track Einladungen",
   "P2wju": "Probleme bei der Anmeldung zur Wachstumskampagne.",
-  "3YvZxn": "Nachrichtensignatur fehlgeschlagen",
-  "3oF2k2": "Ihr Browser unterstützt das Video-Tag nicht.",
-  "20MH6p": "Bestätigen Sie die Metamaskensignatur",
-  "LquQ9": "Öffnen Sie Ihre Metamask-Browsererweiterung und bestätigen Sie Ihre Unterschrift.",
   "4wsD7C": "Du hast {amount} OGN verdient",
   "4gJCWE": "Vollendet, fertiggestellt",
   "NZJzc": "Origin bewerben",
@@ -739,6 +757,7 @@
   "157nkC": "Das verdiente OGN wird am Ende jeder Kampagne verteilt. OGN ist derzeit für die Verwendung auf der Origin-Plattform gesperrt und kann nicht übertragen werden. Es wird erwartet, dass OGN in Zukunft freigeschaltet und übertragbar sein wird.",
   "4weJUD": "Durch die Teilnahme am Origin-Prämienprogramm erklären Sie sich damit einverstanden, dass Sie zukünftig verdiente Origin-Token für mindestens 1 Jahr ab dem Datum des Erwerbs Ihrer Token nicht an andere übertragen oder verkaufen.",
   "4vRJSg": "OGN werden im Rahmen einer Transaktion ausgegeben, die ursprünglich von der Registrierung gemäß dem US-amerikanischen Wertpapiergesetz von 1933 in der jeweils gültigen Fassung (dem „Securities Act“) befreit war, und dürfen in den Vereinigten Staaten nicht an oder für Rechnung oder Nutzen eines US-amerikanischen Unternehmens übertragen werden Person, sofern keine Ausnahme von den Registrierungsanforderungen des Securities Act und allen anwendbaren staatlichen Wertpapiergesetzen vorliegt. Die oben verwendeten Begriffe haben die ihnen in Regulation S gemäß dem Securities Act und allen anwendbaren Gesetzen und Vorschriften zugewiesenen Bedeutungen.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Ich akzeptiere die allgemeinen Geschäftsbedingungen",
   "3ARgQ2": "Ups, {country} ist nicht zulässig",
   "1gZxpn": "Leider sieht es so aus, als befänden Sie sich derzeit in einem Land, in dem Sie aufgrund von gesetzlichen Bestimmungen nicht an Origin Campaigns teilnehmen können.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Konto überprüfen",
   "4hTtL9": "Überprüfen Sie Ihr Telegrammkonto",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Wir werden niemals in Ihrem Namen posten.",
   "2Ezyas": "Was wird auf der Blockchain sichtbar sein?",
   "44w6ur": "Ihr Telegramm-Benutzername und Ihre Konto-ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Überprüfen Sie die Website",
   "vyn8P": "Geben Sie unten Ihre Website-URL ein",
   "2DQDJG": "Was wird auf der Blockchain sichtbar sein?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Sie können OGN in Origin nicht verdienen, aber Sie können Ihr Profil immer noch verifizieren.",
   "BfHYB": "Ich bin sicher",
   "eXPPI": "Nein, warte",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Sammeln Sie Origin-Token (OGN), indem Sie Ihr Profil stärken und Aufgaben auf dem Origin-Marktplatz erledigen.",
   "3JfvSq": "Ja! Melden Sie mich an",
   "wcJnW": "Nein Danke",
