--- a/shah/translations/el_GR.json
+++ b/shah/translations/el_GR.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Συγχαρητήρια",
-  "Qsqy": "Έχετε ενεργοποιήσει με επιτυχία το λογαριασμό σας. Είστε πλέον έτοιμοι να συνεχίσετε το ταξίδι σας στο Origin Market.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "Διεύθυνση ETH",
   "1SGynn": "Επικοινωνία {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Το εικονίδιο Metamask βρίσκεται στο επάνω δεξιό μέρος της γραμμής εργαλείων του προγράμματος περιήγησης.",
   "32hLtQ": "Συγχαρητήρια! Τώρα μπορείτε να ενημερώσετε άλλους χρήστες για την Προέλευση και να είστε ενήμεροι με όλες τις αγορές και τις πωλήσεις σας.",
   "AACIs": "Έχετε τελειώσει και μπορείτε να συνεχίσετε πιέζοντας το παρακάτω κουμπί.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Ιανουάριος 2019 Εκστρατεία",
     "growth.jan2019.short_name": "Ιαν 2019",
     "growth.feb2019.name": "Φεβρουάριος 2019 Εκστρατεία",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Οκτώβριος 2019",
     "growth.nov2019.name": "Νοέμβριος 2019 Εκστρατεία",
     "growth.nov2019.short_name": "Νοέμβριος 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Επαληθευμένο προφίλ email και προέλευσης",
-    "growth.two.attestations.requirement": "Δύο επαληθεύσεις προφίλ",
-    "growth.three.attestations.requirement": "Τρεις επαληθεύσεις προφίλ",
+    "growth.two.attestations.requirement": "Τρεις επαληθεύσεις προφίλ",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Όνομα προφίλ και φωτογραφία",
     "growth.email.requirement": "Επαληθευμένο μήνυμα ηλεκτρονικού ταχυδρομείου",
     "growth.attestation.requirement.twitterAttestation": "Βεβαίωση Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Διάβασε το άρθρο",
     "growth.share.content20.title": "Ο ιδρυτής του CoinList συζητά για τις αποκεντρωμένες αγορές του μέλλοντος",
     "growth.share.content20.details": "Ο Andy Bromberg, συνιδρυτής και Πρόεδρος του CoinList, συζητά τι σκέφτεται για την Προέλευση και το μακροπρόθεσμο όραμά μας.",
-    "growth.share.content20.link": "Δες το βίντεο"
+    "growth.share.content20.link": "Δες το βίντεο",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Διάβασε το άρθρο",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Δες το βίντεο",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Διάβασε το άρθρο",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Δες το βίντεο",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Δες το βίντεο"
   },
   "3eD99i": "Επιβεβαιώστε τη διεύθυνση ηλεκτρονικού ταχυδρομείου σας",
   "1hBrwm": "Προσθέστε όνομα και φωτογραφία στο προφίλ",
@@ -321,7 +342,7 @@
   "4qOByY": "Κερδηθείς",
   "3lytDE": "ΠΕΛΑΤΗ",
   "2dj9Ax": "Κάντε λήψη της εφαρμογής Origin Marketplace",
-  "2PC2yI": "Εγκαταστήστε και ολοκληρώστε 3 επαληθεύσεις για να κερδίσετε",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Μοιραστείτε αυτό",
   "1jzK6G": "Δεν εντοπίσθηκαν καμπάνιες",
   "1bzhfq": "Δεν βρέθηκε ενεργή καμπάνια",
@@ -633,6 +654,7 @@
   "1YUe0g": "Συνολικά κέρδη",
   "2tRIOg": "Δεν εντοπίσθηκαν καμπάνιες",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Κερδίσατε {amount} OGN",
   "1dhANo": "Ακολουθήστε την προέλευση",
@@ -677,10 +699,6 @@
   "2jOW7": "Στείλε προσκλήσεις",
   "2AJXmZ": "Παρακολούθηση προσκλήσεων",
   "P2wju": "Προβλήματα που εγγράφονται στην εκστρατεία ανάπτυξης.",
-  "3YvZxn": "Η υπογραφή μηνύματος δεν ήταν επιτυχής",
-  "3oF2k2": "Το πρόγραμμα περιήγησης που χρησιμοποιείτε δεν υποστηρίζει την ετικέτα βίντεο.",
-  "20MH6p": "Επιβεβαιώστε την υπογραφή Metamask",
-  "LquQ9": "Ανοίξτε την επέκταση του προγράμματος περιήγησης Metamask και επιβεβαιώστε την υπογραφή σας.",
   "4wsD7C": "Κερδίσατε {amount} OGN",
   "4gJCWE": "Ολοκληρώθηκε το",
   "NZJzc": "Προώθηση της προέλευσης",
@@ -739,6 +757,7 @@
   "157nkC": "Τα κέρδη OGN θα διανεμηθούν στο τέλος κάθε εκστρατείας. Το OGN είναι προς το παρόν κλειδωμένο για χρήση στην πλατφόρμα Origin και δεν μπορεί να μεταφερθεί. Αναμένεται ότι το OGN θα ξεκλειδωθεί και θα μεταφερθεί στο μέλλον.",
   "4weJUD": "Συμμετέχοντας στο πρόγραμμα Ανταμοιβών Προέλευσης, συμφωνείτε ότι δεν θα μεταβιβάσετε ή θα πωλήσετε τα μελλοντικά κέρδη Origin tokens σε άλλα για τουλάχιστον 1 χρόνο από την ημερομηνία απόκτησης των μαρκών σας.",
   "4vRJSg": "OGN εκδίδονται σε μια συναλλαγή που απαλλάσσεται αρχικά από την εγγραφή σύμφωνα με τον αμερικανικό νόμο περί κινητών αξιών του 1933, όπως τροποποιήθηκε (ο «νόμος περί κινητών αξιών») και δεν μπορεί να μεταβιβαστεί στις Ηνωμένες Πολιτείες προς ή για λογαριασμό ή προς όφελος οποιασδήποτε χώρας με εξαίρεση την ύπαρξη διαθέσιμης εξαίρεσης από τις απαιτήσεις εγγραφής του Νόμου περί Κινητών Αξιών και από όλους τους ισχύοντες νόμους περί κρατικών τίτλων. Οι όροι που χρησιμοποιούνται παραπάνω έχουν τις έννοιες που τους δόθηκαν στον κανονισμό S βάσει του νόμου περί κινητών αξιών και σε όλους τους ισχύοντες νόμους και κανονισμούς.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Αποδέχομαι τους όρους και τις προϋποθέσεις",
   "3ARgQ2": "Ωχ, το {country} δεν είναι κατάλληλο",
   "1gZxpn": "Δυστυχώς, φαίνεται ότι βρίσκεστε αυτήν την περίοδο σε μια χώρα όπου οι κυβερνητικοί κανονισμοί δεν σας επιτρέπουν να συμμετέχετε στις Καμπάνιες Προέλευσης.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Επιβεβαιώστε το λογαριασμό",
   "4hTtL9": "Επαληθεύστε τον λογαριασμό τηλεγράφων σας",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Ποτέ δεν θα αναρτήσουμε για λογαριασμό σας.",
   "2Ezyas": "Τι θα είναι ορατό στο blockchain;",
   "44w6ur": "Το όνομα χρήστη και το αναγνωριστικό λογαριασμού του τηλεγραφήματος",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Επαληθεύστε την ιστοσελίδα",
   "vyn8P": "Εισαγάγετε τη διεύθυνση URL του ιστοτόπου σας παρακάτω",
   "2DQDJG": "Τι θα είναι ορατό στο blockchain;",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Δεν θα μπορείτε να κερδίζετε OGN στην Προέλευση, αλλά μπορείτε να επαληθεύσετε το προφίλ σας.",
   "BfHYB": "είμαι σίγουρος",
   "eXPPI": "Οχι περίμενε",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Κερδίστε νομίσματα προέλευσης (OGN) ενισχύοντας το προφίλ σας και ολοκληρώνοντας τις εργασίες σας στο Origin Market.",
   "3JfvSq": "Ναί! Εγγέγραψέ με",
   "wcJnW": "Οχι ευχαριστώ",
