--- a/shah/translations/fil_PH.json
+++ b/shah/translations/fil_PH.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Binabati kita",
-  "Qsqy": "Matagumpay mong nilikha ang iyong profile Handa ka na ngayon upang ipagpatuloy ang iyong paglalakbay sa Pinagmulan na Lugar.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "Address ng ETH",
   "1SGynn": "Makipag-ugnay sa {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Ang Metamask icon ay matatagpuan sa kanang tuktok ng tool bar ng iyong browser.",
   "32hLtQ": "Binabati kita! Maaari mo na ngayong mensahe ng iba pang mga gumagamit sa Pinagmulan at manatiling napapanahon sa lahat ng iyong mga pagbili at mga benta.",
   "AACIs": "Tapos ka na at maaaring magpatuloy sa pamamagitan ng pagpindot sa pindutan sa ibaba.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Enero 2019 Kampanya",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Pebrero 2019 Kampanya",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Oktubre 2019",
     "growth.nov2019.name": "Nobyembre 2019 Kampanya",
     "growth.nov2019.short_name": "Nobyembre 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Na-verify na email at Pinagmulan ng profile",
-    "growth.two.attestations.requirement": "Dalawang pagpapatunay ng profile",
-    "growth.three.attestations.requirement": "Tatlong mga pagpapatunay ng profile",
+    "growth.two.attestations.requirement": "Tatlong mga pagpapatunay ng profile",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Pangalan ng larawan at larawan",
     "growth.email.requirement": "Na-verify na email",
     "growth.attestation.requirement.twitterAttestation": "Pagpapatotoo sa Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Basahin ang artikulo",
     "growth.share.content20.title": "Tinatalakay ng Tagapagtatag ng CoinList Ang Mga Desentralisadong Marketplaces ng Hinaharap",
     "growth.share.content20.details": "Tinalakay ni Andy Bromberg, Co-Founder at Pangulo ng CoinList kung ano ang iniisip niya sa Pinagmulan at ang aming pangmatagalang pangitain.",
-    "growth.share.content20.link": "Panoorin ang video"
+    "growth.share.content20.link": "Panoorin ang video",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Basahin ang artikulo",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Panoorin ang video",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Basahin ang artikulo",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Panoorin ang video",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Panoorin ang video"
   },
   "3eD99i": "I-verify ang iyong email address",
   "1hBrwm": "Magdagdag ng pangalan at larawan sa profile",
@@ -321,7 +342,7 @@
   "4qOByY": "Nagkamit",
   "3lytDE": "ITINATAMPOK",
   "2dj9Ax": "I-download ang app na Market Market ng Pinagmulan",
-  "2PC2yI": "I-install at kumpletuhin ang 3 mga pag-verify upang kumita",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Ibahagi ito",
   "1jzK6G": "Walang natagpuan ang mga kampanya",
   "1bzhfq": "Walang nahanap na aktibong kampanya",
@@ -633,6 +654,7 @@
   "1YUe0g": "Kabuuan na kinita",
   "2tRIOg": "Walang natagpuan ang mga kampanya",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Nakamit mo ang {amount} OGN",
   "1dhANo": "Sundin ang Pinagmulan",
@@ -677,10 +699,6 @@
   "2jOW7": "Magpadala ng mga imbitasyon",
   "2AJXmZ": "Mga Imbitasyon sa Pagsubaybay",
   "P2wju": "Mga problema sa pag-enrol sa paglago ng kampanya.",
-  "3YvZxn": "Hindi matagumpay ang lagda ng mensahe",
-  "3oF2k2": "Hindi suportado ng iyong browser ang tag ng video.",
-  "20MH6p": "Kumpirmahin ang Lagda ng Metamask",
-  "LquQ9": "Buksan ang iyong extension ng Metamask browser at kumpirmahin ang iyong pirma.",
   "4wsD7C": "Nakamit mo ang {amount} OGN",
   "4gJCWE": "Nakumpleto",
   "NZJzc": "Itaguyod ang Pinagmulan",
@@ -739,6 +757,7 @@
   "157nkC": "Kumita ng OGN ay ibabahagi sa pagtatapos ng bawat kampanya. Ang OGN ay kasalukuyang naka-lock para magamit sa platform ng Pinagmulan at hindi maililipat. Inaasahan na ang OGN ay mai-lock at maililipat sa hinaharap.",
   "4weJUD": "Sa pamamagitan ng pagsali sa programa ng Gantimpala ng gantimpala, sumasang-ayon ka na hindi mo ililipat o ibebenta ang mga nakuhang mga token ng Pinagmulan sa iba nang hindi bababa sa 1 taon mula sa petsa ng pagkamit ng iyong mga token.",
   "4vRJSg": "Ang OGN ay inisyu sa isang transaksyon na orihinal na exempt mula sa pagpaparehistro sa ilalim ng US Securities Act of 1933, bilang susugan (ang \"Securities Act\"), at maaaring hindi maililipat sa Estados Unidos sa, o para sa account o pakinabang ng, anumang US tao maliban sa alinsunod sa isang magagamit na pag-aalis mula sa mga kinakailangan sa pagpaparehistro ng Securities Act at lahat ng naaangkop na mga batas sa estado ng seguridad. Ang mga tuntunin na ginamit sa itaas ay may mga kahulugan na ibinigay sa kanila sa Regulasyon S sa ilalim ng Securities Act at lahat ng naaangkop na mga batas at regulasyon.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Tinatanggap ko ang mga tuntunin at kundisyon",
   "3ARgQ2": "Oops, {country} ay hindi karapat-dapat",
   "1gZxpn": "Sa kasamaang palad, mukhang ikaw ay kasalukuyang nasa isang bansa kung saan ang mga regulasyon ng pamahalaan ay hindi pinapayagan ka na lumahok sa Mga Kampanya ng Pinagmulan.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "I-verify ang Account",
   "4hTtL9": "Patunayan ang Iyong Telegram Account",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Hindi ka namin mai-post sa ngalan mo.",
   "2Ezyas": "Ano ang makikita sa blockchain?",
   "44w6ur": "Ang iyong Telegram username at account ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Patunayan ang Website",
   "vyn8P": "Ipasok ang iyong URL ng website sa ibaba",
   "2DQDJG": "Ano ang makikita sa blockchain?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Hindi ka makakakuha ng OGN sa Pinagmulan, ngunit maaari mo pa ring i-verify ang iyong profile.",
   "BfHYB": "Sigurado ako",
   "eXPPI": "Hindi, maghintay",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Kumita ng Mga Tula ng Pinagmulan (OGN) sa pamamagitan ng pagpapalakas ng iyong profile at pagkumpleto ng mga gawain sa Pinagmulan na Pamilihan.",
   "3JfvSq": "Oo! Mag-sign up ako",
   "wcJnW": "Salamat nalang",
