--- a/shah/translations/fr_FR.json
+++ b/shah/translations/fr_FR.json
@@ -1,13 +1,17 @@
 {
-  "17TFCN": "Toutes nos félicitations",
-  "Qsqy": "Vous avez créé votre profil avec succès. Vous êtes maintenant prêt à continuer votre voyage sur le marché Origin.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "Adresse ETH",
   "1SGynn": "Contact {role}",
   "1FAmA3": "Commentaires",
   "2gtpRD": "Solde du compte",
   "369PK3": "Avoir plus",
-  "2L5Kd2": "Booked",
+  "2L5Kd2": "Réservé",
   "3esZCn": {
     "schema.forSale": "À vendre",
     "schema.forRent": "À louer",
@@ -100,7 +104,7 @@
   "2idJzM": "L'icône Metamask est située en haut à droite de la barre d'outils de votre navigateur.",
   "32hLtQ": "Toutes nos félicitations! Vous pouvez désormais envoyer des messages aux autres utilisateurs sur Origin et rester à jour de tous vos achats et ventes.",
   "AACIs": "Vous avez terminé et vous pouvez continuer en appuyant sur le bouton ci-dessous.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Campagne de janvier 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campagne de février 2019",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Octobre 2019",
     "growth.nov2019.name": "Campagne de Novembre 2019",
     "growth.nov2019.short_name": "Novembre 2019",
+    "growth.dec2019.name": "Campagne de décembre 2019",
+    "growth.dec2019.short_name": "Décembre 2019",
     "growth.profile.and.email.requirement": "Email vérifié et profile sur Origin",
-    "growth.two.attestations.requirement": "Deux vérifications de profil",
-    "growth.three.attestations.requirement": "Trois vérifications de profil",
+    "growth.two.attestations.requirement": "Trois vérifications de profil",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Nom et photo de profil",
     "growth.email.requirement": "Email vérifié",
     "growth.attestation.requirement.twitterAttestation": "Attestation Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Lire l'article",
     "growth.share.content20.title": "Le Fondateur de CoinList Parle des Marchés Décentralisés du Futur",
     "growth.share.content20.details": "Andy Bromberg, Co-Fondateur et Président de CoinList nous dit ce qu'il pense d'Origin et de notre vision à long terme.",
-    "growth.share.content20.link": "Regarder la vidéo"
+    "growth.share.content20.link": "Regarder la vidéo",
+    "growth.share.content21.title": "Construit avec Origin : une Alternative Décentralisée à Shopify",
+    "growth.share.content21.details": "Nous sommes fiers d'annoncer l'arrivée du magasin e-commerce d'Origin, une alternative décentralisée open-source de Shopify, entièrement hébergée sur IPFS.",
+    "growth.share.content21.link": "Lire l'article",
+    "growth.share.content22.title": "Comment un Employé Fondateur de YouTube fait Concurrence à Uber et Airbnb",
+    "growth.share.content22.details": "Matthew Liu d'Origin discute avec Ahmed Al-Balaghi, co-fondateur d'Encrypted Podcast.",
+    "growth.share.content22.link": "Regarder la vidéo",
+    "growth.share.content23.title": "Annonce des Commandes Origin pour Promouvoir les Annonces des Vendeurs avec de l'OGN",
+    "growth.share.content23.details": "Les Commandes Origin : une nouvelle façon pour les vendeurs de booster leurs ventes, et pour les développeurs et associés DApp de gagner des Jetons Origin.",
+    "growth.share.content23.link": "Lire l'article",
+    "growth.share.content24.title": "Paul Veradittakit de Pantera Capital Explique Comment Origin est un Vecteur de Liberté",
+    "growth.share.content24.details": "Rencontrez Paul, \"co-investment officer\" à Pantera Capital.",
+    "growth.share.content24.link": "Regarder la vidéo",
+    "growth.share.content25.title": "Joey Krug, Co-fondateur d'Augur, Explique la Valeur d'Origin",
+    "growth.share.content25.details": "Joey Krug, co-fondateur d'Augur & \"co-investment officer\" à Pantera Capital, explique la valeur d'Origin.",
+    "growth.share.content25.link": "Regarder la vidéo"
   },
   "3eD99i": "Vérifiez votre adresse e-mail",
   "1hBrwm": "Ajoutez un nom et une photo à votre profil",
@@ -321,7 +342,7 @@
   "4qOByY": "Gagné",
   "3lytDE": "EN VEDETTE",
   "2dj9Ax": "Télécharger l'application Origin Marketplace",
-  "2PC2yI": "Installez & complétez les 3 vérifications pour gagner",
+  "3mDuJu": "Installez & complétez les 4 vérifications.",
   "14jidi": "Partager Ceci",
   "1jzK6G": "Aucune campagne détectée",
   "1bzhfq": "Aucune campagne active trouvée",
@@ -633,6 +654,7 @@
   "1YUe0g": "Total gagné",
   "2tRIOg": "Aucune campagne détectée",
   "3Dcwum": "Origin Marketplace a été installé",
+  "Nuz99": "Partner Referral",
   "acQDS": "Terminé",
   "2JJkHr": "Vous avez gagné {amount} OGN",
   "1dhANo": "Suivre Origin",
@@ -677,10 +699,6 @@
   "2jOW7": "Envoyer Invitations",
   "2AJXmZ": "Suivre Invitations",
   "P2wju": "Des problèmes sont survenus pendant l'inscription à la campagne de croissance.",
-  "3YvZxn": "La signature du message a échoué",
-  "3oF2k2": "Votre navigateur ne supporte pas le tag vidéo.",
-  "20MH6p": "Confirmer la signature Metamask",
-  "LquQ9": "Ouvrez votre extension de navigateur Metamask et confirmez votre signature.",
   "4wsD7C": "Vous avez gagné {amount} OGN",
   "4gJCWE": "Terminé",
   "NZJzc": "Promouvoir Origin",
@@ -739,6 +757,7 @@
   "157nkC": "Les OGN gagnés seront distribués à la fin de chaque campagne. Les OGN ne sont actuellement utilisables que sur la plateforme Origin et ne peuvent pas être transférés. Il est prévu de débloquer les OGN, de les rendre utilisables et transférables ailleurs, plus tard.",
   "4weJUD": "En rejoignant le programme de récompenses Origin, vous acceptez de ne pas transférer ou vendre les futurs jetons Origin que vous gagnerez pendant minimum 1 an après avoir gagné ces jetons.",
   "4vRJSg": "Les OGN sont émis dans le cadre d’une transaction initialement exempte d’enregistrement en vertu du US Securities Act of 1933, tel que modifié (le «Securities Act»), et ne peuvent être transférés aux États-Unis à un compte américain, ni pour le compte ou au profit de ceux-ci. personne, sauf en vertu d’une exemption possible des exigences d’inscription de la Securities Act et de toutes les lois applicables sur les valeurs mobilières des États. Les termes utilisés ci-dessus ont la signification qui leur est donnée dans le règlement S de la loi sur les valeurs mobilières et dans toutes les lois et tous les règlements applicables.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "J'accepte les termes et conditions",
   "3ARgQ2": "Oups, {country} n'est pas éligible",
   "1gZxpn": "Malheureusement, il semble que vous vous trouviez actuellement dans un pays où la réglementation gouvernementale ne vous autorise pas à participer aux campagnes Origin.",
@@ -805,13 +824,13 @@
   "1iXhvu": "Vérifiez votre numéro de téléphone",
   "1OUJhq": "Entrez le code que nous vous avons envoyé ci-dessous",
   "jNcvI": "Nous vous avons envoyé un code de vérification par SMS. Veuillez l'entrer ci-dessous",
-  "MdVoC": "Failed to verify status. Please try again.",
+  "MdVoC": "Échec de la vérification du statut. Veuillez réessayer.",
   "2PjJHN": "Vérifier le compte",
   "4hTtL9": "Vérifiez votre compte Telegram",
+  "2gEaQA": "La vérification Telegram n'est disponible qu'avec l'application Origin Marketplace.",
   "2KQpoG": "Nous ne posterons rien en votre nom.",
   "2Ezyas": "Qu'est-ce qui sera visible sur la blockchain?",
   "44w6ur": "ID de votre compte Telegram",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Vérifiez votre site web",
   "vyn8P": "Entrez l'URL de votre site ci-dessous",
   "2DQDJG": "Qu'est-ce qui sera visible sur la blockchain?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Vous ne pourrez pas gagner d'OGN sur Origin, mais vous pourrez quand même vérifier votre profil.",
   "BfHYB": "Je suis sûr",
   "eXPPI": "Je change d'avis",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Gagnez des jetons Origin (OGN) en renforçant votre profil et en accomplissant des tâches dans le marché Origin.",
   "3JfvSq": "Oui ! Je veux participer",
   "wcJnW": "Non merci",
@@ -1155,7 +1175,7 @@
   "pT9j": "Détenu",
   "NrhOS": "Relâché",
   "QUO1v": "Quantité",
-  "1uAeN3": "Offer Value",
+  "1uAeN3": "Valeur de l'offre",
   "47deji": "L'Ether est hautement volatile et sa valeur peut changer significativement en une courte période de temps.",
   "avBAh": "Valeur Actuelle",
   "2YJu95": "Statut",
@@ -1266,9 +1286,9 @@
   "3szOog": "Détails de la Transaction",
   "2WKBdJ": "Mes ventes",
   "4sERIr": "Mes achats",
-  "4xRYON": "You haven’t bought anything yet.",
-  "2Q96aI": "Browse Listings",
-  "3rqoGs": "{time} ago",
+  "4xRYON": "Vous n’avez pas encore acheté quoi que ce soit.",
+  "2Q96aI": "Parcourir les annonces",
+  "3rqoGs": "Il y a {time}",
   "1OTyrm": "Offre faite sur",
   "1qsiOA": "Tous",
   "3I5PI0": "Actives",
