--- a/shah/translations/hr_HR.json
+++ b/shah/translations/hr_HR.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Čestitamo",
-  "Qsqy": "Uspješno ste stvorili svoj profil Sada ste spremni nastaviti svoje putovanje tržištem Origin.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "U redu",
   "yzJlS": "ETH adresa",
   "1SGynn": "Kontaktirajte {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Ikona Metamask nalazi se u gornjem desnom kutu alatne trake preglednika.",
   "32hLtQ": "Čestitamo! Sada možete obavijestiti druge korisnike o nastanku i ostati u tijeku sa svim svojim kupnjama i prodajom.",
   "AACIs": "Gotovi ste i možete nastaviti pritiskom na gumb ispod.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Kampanja u siječnju 2019. godine",
     "growth.jan2019.short_name": "Siječnja 2019",
     "growth.feb2019.name": "Kampanja veljače 2019. godine",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Listopada 2019. godine",
     "growth.nov2019.name": "Novembar 2019. kampanja",
     "growth.nov2019.short_name": "Studenog 2019. godine",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Potvrđena adresa e-pošte i profil porijekla",
-    "growth.two.attestations.requirement": "Dvije provjere profila",
-    "growth.three.attestations.requirement": "Tri provjere profila",
+    "growth.two.attestations.requirement": "Tri provjere profila",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Ime i fotografija profila",
     "growth.email.requirement": "Potvrđena e-pošta",
     "growth.attestation.requirement.twitterAttestation": "Twitter potvrda",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Pročitaj članak",
     "growth.share.content20.title": "Osnivač CoinLista razgovara o decentraliziranim tržištima budućnosti",
     "growth.share.content20.details": "Andy Bromberg, suosnivač i predsjednik CoinLista, raspravlja o onome što misli o Podrijetlu i našoj dugoročnoj viziji.",
-    "growth.share.content20.link": "Gledaj video"
+    "growth.share.content20.link": "Gledaj video",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Pročitaj članak",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Gledaj video",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Pročitaj članak",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Gledaj video",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Gledaj video"
   },
   "3eD99i": "Potvrdite svoju email adresu",
   "1hBrwm": "U ime dodajte ime i fotografiju",
@@ -321,7 +342,7 @@
   "4qOByY": "zarađen",
   "3lytDE": "Istaknuti",
   "2dj9Ax": "Preuzmite aplikaciju Origin Marketplace",
-  "2PC2yI": "Instalirajte i dovršite 3 provjere za zaradu",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Podijeli ovo",
   "1jzK6G": "Nisu otkrivene kampanje",
   "1bzhfq": "Nije pronađena aktivna kampanja",
@@ -633,6 +654,7 @@
   "1YUe0g": "Ukupno zaradio",
   "2tRIOg": "Nisu otkrivene kampanje",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Zaradili ste {amount} OGN",
   "1dhANo": "Slijedite porijeklo",
@@ -677,10 +699,6 @@
   "2jOW7": "Pošaljite pozivnice",
   "2AJXmZ": "Pratite pozivnice",
   "P2wju": "Problemi s upisom u kampanju rasta.",
-  "3YvZxn": "Potpis poruke nije uspio",
-  "3oF2k2": "Vaš preglednik ne podržava videooznaku.",
-  "20MH6p": "Potvrdite potpis Metamaske",
-  "LquQ9": "Otvorite proširenje preglednika Metamask i potvrdite svoj potpis.",
   "4wsD7C": "Zaradili ste {amount} OGN",
   "4gJCWE": "dovršen",
   "NZJzc": "Promovirajte porijeklo",
@@ -739,6 +757,7 @@
   "157nkC": "Zarađeni OGN distribuirat će se na kraju svake kampanje. OGN je trenutno zaključan za upotrebu na platformi Origin i nije ga moguće prenijeti. Očekuje se da će OGN u budućnosti biti otključana i prenosiva.",
   "4weJUD": "Ulaskom u program nagrađivanja Origin slažete se da nećete prenijeti ili prodavati buduće zarađene tokene Origin drugima najmanje 1 godinu od datuma zarade svojih žetona.",
   "4vRJSg": "OGN se izdaju transakcijom koja je prvobitno izuzeta od registracije na temelju američkog Zakona o vrijednosnim papirima iz 1933., kako je izmijenjen i dopunjen (\"Zakon o vrijednosnim papirima\") i ne može se prenijeti u SAD na račun ili u korist bilo kojeg SAD-a osoba osim na temelju dostupnog izuzeća od zahtjeva za registracijom Zakona o vrijednosnim papirima i svih važećih zakona o državnim vrijednosnim papirima. Izrazi koji se gore koriste imaju značenja koja su im dana u Pravilniku S prema Zakonu o vrijednosnim papirima i svim važećim zakonima i propisima.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Prihvaćam uvjete i odredbe",
   "3ARgQ2": "Ups, {country} ne ispunjava uvjete",
   "1gZxpn": "Nažalost, čini se da ste trenutno u zemlji u kojoj vam državni propisi ne dopuštaju sudjelovanje u kampanjama porijekla.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Potvrdi Račun",
   "4hTtL9": "Potvrdite račun Telegrama",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nikada nećemo objaviti u vaše ime.",
   "2Ezyas": "Što će biti vidljivo na blockchainu?",
   "44w6ur": "Vaše Telegram korisničko ime i ID računa",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Provjerite web mjesto",
   "vyn8P": "U nastavku unesite URL svoje web lokacije",
   "2DQDJG": "Što će biti vidljivo na blockchainu?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Nećete moći zarađivati OGN na Porijeklu, ali još uvijek možete potvrditi svoj profil.",
   "BfHYB": "siguran sam",
   "eXPPI": "Ne, čekaj",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Zaradite žetone porijekla (OGN) jačanjem profila i dovršavanjem zadataka na tržištu porijekla.",
   "3JfvSq": "Da! Prijavi me",
   "wcJnW": "Ne hvala",
