--- a/shah/translations/id_ID.json
+++ b/shah/translations/id_ID.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Selamat",
-  "Qsqy": "Anda telah berhasil membuat profil Anda. Sekarang Anda siap untuk melanjutkan perjalanan Anda di Origin Marketplace.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Baik",
   "yzJlS": "Alamat ETH",
   "1SGynn": "Hubungi {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Ikon Metamask terletak di kanan atas bilah alat browser Anda.",
   "32hLtQ": "Selamat! Anda sekarang dapat mengirim pesan kepada pengguna lain di Asal dan tetap mengetahui semua pembelian dan penjualan Anda.",
   "AACIs": "Anda selesai dan dapat melanjutkan dengan menekan tombol di bawah ini.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Kampanye Januari 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Kampanye Februari 2019",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Oktober 2019",
     "growth.nov2019.name": "Kampanye November 2019",
     "growth.nov2019.short_name": "November 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Email yang diverifikasi dan profil Asal",
-    "growth.two.attestations.requirement": "Dua verifikasi profil",
-    "growth.three.attestations.requirement": "Tiga verifikasi profil",
+    "growth.two.attestations.requirement": "Tiga verifikasi profil",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Nama profil dan foto",
     "growth.email.requirement": "Email yang diverifikasi",
     "growth.attestation.requirement.twitterAttestation": "Pengesahan Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Baca artikel",
     "growth.share.content20.title": "Pendiri CoinList Membahas Pasar Terdesentralisasi di Masa Depan",
     "growth.share.content20.details": "Andy Bromberg, Co-Founder dan President CoinList membahas apa yang ia pikirkan tentang Origin dan visi jangka panjang kami.",
-    "growth.share.content20.link": "Tonton videonya"
+    "growth.share.content20.link": "Tonton videonya",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Baca artikel",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Tonton videonya",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Baca artikel",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Tonton videonya",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Tonton videonya"
   },
   "3eD99i": "Verifikasi alamat email Anda",
   "1hBrwm": "Tambahkan nama dan foto ke profil",
@@ -321,7 +342,7 @@
   "4qOByY": "Berpenghasilan",
   "3lytDE": "FITUR",
   "2dj9Ax": "Unduh aplikasi Origin Marketplace",
-  "2PC2yI": "Pasang & lengkapi 3 verifikasi untuk menghasilkan",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Bagikan ini",
   "1jzK6G": "Tidak ada kampanye yang terdeteksi",
   "1bzhfq": "Tidak ada kampanye aktif yang ditemukan",
@@ -633,6 +654,7 @@
   "1YUe0g": "Total yang diterima",
   "2tRIOg": "Tidak ada kampanye yang terdeteksi",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Anda mendapat {amount} OGN",
   "1dhANo": "Ikuti Asal",
@@ -677,10 +699,6 @@
   "2jOW7": "Mengirim undangan",
   "2AJXmZ": "Lacak Undangan",
   "P2wju": "Masalah saat mendaftar ke kampanye pertumbuhan.",
-  "3YvZxn": "Tanda tangan pesan tidak berhasil",
-  "3oF2k2": "Browser Anda tidak mendukung tag video.",
-  "20MH6p": "Konfirmasikan Tanda Tangan Metamask",
-  "LquQ9": "Buka ekstensi browser Metamask Anda dan konfirmasikan tanda tangan Anda.",
   "4wsD7C": "Anda mendapat {amount} OGN",
   "4gJCWE": "Lengkap",
   "NZJzc": "Promosikan Asal",
@@ -739,6 +757,7 @@
   "157nkC": "OGN yang diperoleh akan didistribusikan pada akhir setiap kampanye. OGN saat ini dikunci untuk penggunaan pada platform Asal dan tidak dapat ditransfer. Diharapkan bahwa OGN akan dibuka dan ditransfer di masa depan.",
   "4weJUD": "Dengan bergabung dengan program hadiah Asal, Anda setuju bahwa Anda tidak akan mentransfer atau menjual token Asal yang diterima di masa mendatang kepada orang lain setidaknya selama 1 tahun dari tanggal perolehan token Anda.",
   "4vRJSg": "OGN dikeluarkan dalam transaksi yang pada awalnya dibebaskan dari pendaftaran berdasarkan US Securities Act of 1933, sebagaimana telah diubah (\"Securities Act\"), dan tidak dapat ditransfer di Amerika Serikat ke, atau untuk akun atau manfaat dari, AS orang kecuali sesuai dengan pengecualian yang tersedia dari persyaratan registrasi Securities Act dan semua undang-undang sekuritas negara yang berlaku. Istilah yang digunakan di atas memiliki arti yang diberikan kepada mereka dalam Peraturan S di bawah Securities Act dan semua hukum dan peraturan yang berlaku.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "saya menerima syarat dan ketentuannya",
   "3ARgQ2": "Ups, {country} tidak memenuhi syarat",
   "1gZxpn": "Sayangnya, sepertinya Anda saat ini berada di negara di mana peraturan pemerintah tidak mengizinkan Anda untuk berpartisipasi dalam Kampanye Asal.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "verifikasi akun",
   "4hTtL9": "Verifikasi Akun Telegram Anda",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Kami tidak akan pernah memposting atas nama Anda.",
   "2Ezyas": "Apa yang akan terlihat di blockchain?",
   "44w6ur": "Nama pengguna dan ID akun Telegram Anda",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verifikasi Situs Web",
   "vyn8P": "Masukkan URL situs web Anda di bawah ini",
   "2DQDJG": "Apa yang akan terlihat di blockchain?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Anda tidak akan dapat memperoleh OGN di Asal, tetapi Anda masih dapat memverifikasi profil Anda.",
   "BfHYB": "saya yakin",
   "eXPPI": "Tidak, tunggu",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Dapatkan Token Asal (OGN) dengan memperkuat profil Anda dan menyelesaikan tugas di Origin Marketplace.",
   "3JfvSq": "Iya! Daftarkan aku",
   "wcJnW": "Tidak, terima kasih",
