--- a/shah/translations/ja_JP.json
+++ b/shah/translations/ja_JP.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "おめでとうございます!!",
-  "Qsqy": "プロフィールの作成に成功しました。 Originマーケットプレイスを使う準備が整いました。",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "ETHアドレス",
   "1SGynn": "コントラクト {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "メタマスクアイコンは、ブラウザのツールバーの右上にあります。",
   "32hLtQ": "おめでとうございます。 Originのユーザーへメッセージを送る事ができるようになりました。取引に関する情報も最新にキープされます。",
   "AACIs": "下のボタンを押すと完了です。",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "2019年1月キャンペーン",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月キャンペーン",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "2019年10月",
     "growth.nov2019.name": "2019年11月キャンペーン",
     "growth.nov2019.short_name": "2019年11月",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "確認済みのメールアドレスとOriginのプロフィール",
-    "growth.two.attestations.requirement": "２つのプロフィール認証",
-    "growth.three.attestations.requirement": "3つのプロファイル検証",
+    "growth.two.attestations.requirement": "3つのプロファイル検証",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "プロフィール名と写真",
     "growth.email.requirement": "確認済みメール",
     "growth.attestation.requirement.twitterAttestation": "Twitter認証",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "記事を読む",
     "growth.share.content20.title": "CoinListファウンダーが未来の分散型マーケットプレイスについて議論します",
     "growth.share.content20.details": "CoinListの共同設立者兼社長であるAndy Brombergが、Originと私たちの長期ビジョンについてどう思うかについて話します。",
-    "growth.share.content20.link": "動画を見る"
+    "growth.share.content20.link": "動画を見る",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "記事を読む",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "動画を見る",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "記事を読む",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "動画を見る",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "動画を見る"
   },
   "3eD99i": "メールアドレスを認証してください",
   "1hBrwm": "プロフィールに名前と写真を追加してください",
@@ -321,7 +342,7 @@
   "4qOByY": "収益",
   "3lytDE": "特徴",
   "2dj9Ax": "Origin マーケットプレイスアプリをダウンロードする",
-  "2PC2yI": "インストールと３つの認証を完了して報酬をゲットしましょう！",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "シェアする",
   "1jzK6G": "キャンペーンがみつかりません",
   "1bzhfq": "アクティブなキャンペーンは見つかりません",
@@ -633,6 +654,7 @@
   "1YUe0g": "獲得合計",
   "2tRIOg": "キャンペーンがみつかりません",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "{amount} OGNを獲得しました",
   "1dhANo": "Originをフォローする",
@@ -677,10 +699,6 @@
   "2jOW7": "招待状を送信",
   "2AJXmZ": "招待状を追跡する",
   "P2wju": "成長キャンペーンへの登録に関する問題",
-  "3YvZxn": "メッセージ署名が失敗しました",
-  "3oF2k2": "お使いのブラウザはビデオタグをサポートしていません",
-  "20MH6p": "メタマスクの署名を確認してください",
-  "LquQ9": "ブラウザ拡張のMetamaskを開き、署名を確認してください",
   "4wsD7C": "{amount} OGNを獲得しました",
   "4gJCWE": "完了",
   "NZJzc": "Originを宣伝する",
@@ -739,6 +757,7 @@
   "157nkC": "獲得したOGNは、各キャンペーンの最後に配布されます。 OGNは現在、Originプラットフォームでの使用がロックされており、転送できません。 これは将来解除され、譲渡可能になる予定です。",
   "4weJUD": "Originリワードプログラムに参加することにより、トークンを獲得した日から少なくとも1年間、獲得したOriginトークンを他者に譲渡または販売しないことに同意します。",
   "4vRJSg": "OGNは、もともと1933年の米国証券法の下で修正された（「証券法」）登録から免除された取引で発行されており、米国で、または米国の口座または利益のために譲渡することはできません。証券法および該当するすべての州証券法の登録要件の利用可能な免除に従う場合を除き、個人。上記で使用されている用語は、証券法および適用されるすべての法律および規制に基づく規則で与えられている意味を持ちます。",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "利用規約に同意します",
   "3ARgQ2": "おっと、 {country} は対象外です",
   "1gZxpn": "残念ながら、あなたは現在、政府の規制によりOriginのキャンペーンに参加することが許可されていない国にいるようです。",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "アカウント を認証してください",
   "4hTtL9": "Telegramアカウントを認証してください",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "あなたに代わって投稿することはありません。",
   "2Ezyas": "何がブロックチェーン上で表示されますか？",
   "44w6ur": "Telegramのユーザー名とアカウントID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "ウェブサイトを認証してください",
   "vyn8P": "下記にあなたのウェブサイトのURLを入力してください",
   "2DQDJG": "何がブロックチェーン上で表示されますか？",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "OriginでOGNを獲得することはできませんが、プロフィールを確認することはできます。",
   "BfHYB": "はい、了解です",
   "eXPPI": "いいえ！欲しいです",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "プロファイルを強化し、Origin マーケットプレイスでタスクを完了することで、Originトークン（OGN）を獲得します。",
   "3JfvSq": "はい！サインアップします。",
   "wcJnW": "いいえ、結構です。",
