--- a/shah/translations/ko_KR.json
+++ b/shah/translations/ko_KR.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "축하드립니다!",
-  "Qsqy": "계정이 성공적으로 활성화되었습니다. 이제 오리진 마켓플레이스를 사용하여, 멋진 거래들을 성사시켜보세요.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "수락",
   "yzJlS": "ETH 주소",
   "1SGynn": "연락 {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "메타마스크(Metamask) 아이콘은 브라우저 도구 모음의 오른쪽 위에 있습니다.",
   "32hLtQ": "축하드립니다! 이제 당신은 오리진(Origin) 에서 다른 사용자에게 메시지를 보내고 모든 구매 및 판매에 대한 최신정보를 얻을수 있습니다.",
   "AACIs": "완료 되었으며 이제 아래 버튼을 눌러 계속 진행해 주세요.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "2019 년 1 월 캠페인",
     "growth.jan2019.short_name": "2019 년 1 월",
     "growth.feb2019.name": "2019 년 2 월 캠페인",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "2019년 10월",
     "growth.nov2019.name": "2019년 11월 캠페인",
     "growth.nov2019.short_name": "2019년 11월",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "인증된 이메일 및 오리진 프로필",
-    "growth.two.attestations.requirement": "두 개의 프로필 확인",
-    "growth.three.attestations.requirement": "세개의 프로필 인증",
+    "growth.two.attestations.requirement": "세개의 프로필 인증",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "프로필 이름 및 사진",
     "growth.email.requirement": "인증된 이메일(email)",
     "growth.attestation.requirement.twitterAttestation": "트위터 인증",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "해당 기사를 읽어보세요",
     "growth.share.content20.title": "코인리스트 파운더와 미래의 분산형 마켓플레이스에 대해서 토론",
     "growth.share.content20.details": "코인리스트(CoinList)의 Ceo이자 공동 창업자인 앤디 브룸버그(Andy Broomberg)와 그가 생각하는 오리진 그리고 우리의 장기간의 비젼에 대해서 토론",
-    "growth.share.content20.link": "비디오 감상하기"
+    "growth.share.content20.link": "비디오 감상하기",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "해당 기사를 읽어보세요",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "비디오 감상하기",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "해당 기사를 읽어보세요",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "비디오 감상하기",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "비디오 감상하기"
   },
   "3eD99i": "당신의 이메일 주소를 인증하세요",
   "1hBrwm": "프로필에 이름과 사진을 추가해주세요.",
@@ -321,7 +342,7 @@
   "4qOByY": "획득",
   "3lytDE": "게시 되었습니다.",
   "2dj9Ax": "오리진 마켓플레이스 앱 다운로드",
-  "2PC2yI": "설치 및 3가지 인증절차 완료후 획득",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "공유하기",
   "1jzK6G": "현재 진행중인 캠페인이 없습니다.",
   "1bzhfq": "현재 진행중인 캠페인이 없습니다.",
@@ -633,6 +654,7 @@
   "1YUe0g": "총 획득량",
   "2tRIOg": "현재 진행중인 캠페인이 없습니다.",
   "3Dcwum": "오리진 마켓플레이스가 설치되었습니다",
+  "Nuz99": "Partner Referral",
   "acQDS": "완료",
   "2JJkHr": "당신은 {amount} 의 OGN을 가지고 있습니다.",
   "1dhANo": "팔로우 오리진",
@@ -677,10 +699,6 @@
   "2jOW7": "초대장 전송",
   "2AJXmZ": "초대장 추적",
   "P2wju": "Growth 캠페인에 참여하는데 문제가 있습니다",
-  "3YvZxn": "메시지 서명 실패",
-  "3oF2k2": "귀하의 브라우저가 비디오 태그를 지원하지 않습니다",
-  "20MH6p": "메타 마스크(Metamask) 서명 확인",
-  "LquQ9": "메타마스크(Metamask) 브라우저 확장 프로그램을 열고 서명을 확인해주세요",
   "4wsD7C": "당신은 {amount} OGN을 획득했습니다.",
   "4gJCWE": "완료",
   "NZJzc": "오리진 프로모션",
@@ -739,6 +757,7 @@
   "157nkC": "리워드를 통해 얻은 OGN은 각 캠페인이 끝날 때 분배됩니다. OGN은 현재 오리진 플랫폼에서 잠겨있고, 옮겨질 수 없습니다. 향후 OGN의 잠금이 해제된 후, 이동이 가능해질 것입니다.",
   "4weJUD": "오리진 리워드 프로그램에 참여함으로써 당신은 향후 오리진 리워드를 획득한 날로부터 최소 1년이 지날 때까지 오리진 토큰을 다른 사람에게 팔거나 이동시키지 않을 것에 동의합니다.",
   "4vRJSg": "개정된 1933년 미국 증권법(\"증권법\")에 따라, OGN은 등록이 면제된 거래에서만 발행되고, 증권법 및 모든 관련 주 증권법의 등록 요건에서 면제에 의한 경우를 제외하고, 미국인의 이익이나 계정을 위해 미국에서 거래를 위한 이동은 불가능합니다. 위에서 사용된 모든 용어는 증권법과 모든 적용가능한 법률 그리고 규제 하에서 규정S에 의해 그 의미를 갖습니다.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "저는 이용 약관에 동의합니다",
   "3ARgQ2": "죄송합니다. {country} 해당 국가에서는 사용할 수 없습니다.",
   "1gZxpn": "안타깝지만, 현재 당신은 오리진(Origin) 캠페인 참여가 허용되지 않는 국가에 있습니다.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "계정 인증",
   "4hTtL9": "텔레그램 계정을 인증하세요",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "오리진은 절대 사용자를 대신하여 게시하지 않습니다",
   "2Ezyas": "어떤 것들이 블록체인 상에 기록되나요?",
   "44w6ur": "사용자의 텔레그램 username 그리고 계정 ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "웹사이트(Website) 를 인증해주세요",
   "vyn8P": "아래에 개인 사이트 URL을 입력하세요",
   "2DQDJG": "어떤 것들이 블록체인에 기록되나요?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "오리진 상에서 OGN을 얻을 수는 없지만, 여전히 프로필 인증은 가능합니다.",
   "BfHYB": "네, 좋습니다.",
   "eXPPI": "아니요, 잠시만요!",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "여러분의 프로필을 완성도 있게 만들고, 오리진 마켓플레이스에서 여러 미션을 수행하면서 오리진토큰(OGN) 을 얻으세요",
   "3JfvSq": "네! 등록하겠습니다",
   "wcJnW": "괜찮습니다",
