--- a/shah/translations/ro_RO.json
+++ b/shah/translations/ro_RO.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Felicitări",
-  "Qsqy": "V-ați creat profilul cu succes. Acum sunteți gata să vă continuați călătoria pe piața originară.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "O.K",
   "yzJlS": "Adresa ETH",
   "1SGynn": "Contact {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Pictograma Metamask este situată în partea din dreapta sus a barei de instrumente a browserului.",
   "32hLtQ": "Felicitări! Acum puteți trimite altor utilizatori mesaje de origine și să fiți la curent cu toate achizițiile și vânzările.",
   "AACIs": "Ați terminat și puteți continua apăsând butonul de mai jos.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Ianuarie 2019 Campanie",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campania din februarie 2019",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Octombrie 2019",
     "growth.nov2019.name": "Campania din noiembrie 2019",
     "growth.nov2019.short_name": "Noiembrie 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "E-mail verificat și profil de origine",
-    "growth.two.attestations.requirement": "Două verificări de profil",
-    "growth.three.attestations.requirement": "Trei verificări de profil",
+    "growth.two.attestations.requirement": "Trei verificări de profil",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Numele și fotografia profilului",
     "growth.email.requirement": "E-mail verificat",
     "growth.attestation.requirement.twitterAttestation": "Atestare Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Citește articolul",
     "growth.share.content20.title": "Fondatorul CoinList discută despre piețele descentralizate ale viitorului",
     "growth.share.content20.details": "Andy Bromberg, co-fondator și președinte CoinList discută ce crede despre origine și despre viziunea noastră pe termen lung.",
-    "growth.share.content20.link": "Priveste filmarea"
+    "growth.share.content20.link": "Priveste filmarea",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Citește articolul",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Priveste filmarea",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Citește articolul",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Priveste filmarea",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Priveste filmarea"
   },
   "3eD99i": "Verifică-ți adresa de email",
   "1hBrwm": "Adăugați nume și fotografie la profil",
@@ -321,7 +342,7 @@
   "4qOByY": "câștigat",
   "3lytDE": "RECOMANDATE",
   "2dj9Ax": "Descărcați aplicația Origin Marketplace",
-  "2PC2yI": "Instalați și completați 3 verificări pentru a câștiga",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Imparte asta",
   "1jzK6G": "Nu au fost detectate campanii",
   "1bzhfq": "Nu a fost găsită nicio campanie activă",
@@ -633,6 +654,7 @@
   "1YUe0g": "Total câștigat",
   "2tRIOg": "Nu au fost detectate campanii",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Ai câștigat {amount} OGN",
   "1dhANo": "Urmăriți originea",
@@ -677,10 +699,6 @@
   "2jOW7": "Trimite invitații",
   "2AJXmZ": "Urmăriți invitațiile",
   "P2wju": "Probleme de înscriere în campania de creștere.",
-  "3YvZxn": "Semnătura mesajului nu a reușit",
-  "3oF2k2": "Browserul dvs. nu acceptă eticheta video.",
-  "20MH6p": "Confirmați semnatura metamask",
-  "LquQ9": "Deschideți extensia browser-ului Metamask și confirmați semnătura.",
   "4wsD7C": "Ai câștigat {amount} OGN",
   "4gJCWE": "terminat",
   "NZJzc": "Promovează originea",
@@ -739,6 +757,7 @@
   "157nkC": "OGN câștigate va fi distribuit la sfârșitul fiecărei campanii. OGN este în prezent blocat pentru utilizare pe platforma Origin și nu poate fi transferat. Se așteaptă ca OGN să fie deblocat și transferabil în viitor.",
   "4weJUD": "Prin alăturarea programului de recompense Origin, sunteți de acord că nu veți transfera sau vinde viitoarele jetoane Origin câștigate altui timp de cel puțin 1 an de la data câștigării jetoanelor dvs.",
   "4vRJSg": "OGN sunt emise într-o tranzacție scutită inițial de înregistrare în conformitate cu US Securities Act din 1933, astfel cum a fost modificată („Securities Act”) și nu poate fi transferată în Statele Unite către sau în contul sau beneficiul oricărui SUA persoană, cu excepția unei derogări disponibile de la cerințele de înregistrare din Legea privind valorile mobiliare și toate legile privind valorile mobiliare de stat. Termenii folosiți mai sus au semnificațiile care le sunt date în Regulamentul S în baza Legii valorilor mobiliare și în toate legile și reglementările aplicabile.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Accept termenii si conditiile",
   "3ARgQ2": "Hopa, {country} nu este eligibilă",
   "1gZxpn": "Din păcate, se pare că sunteți în prezent într-o țară în care regulamentele guvernamentale nu vă permit să participați la campaniile de origine.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Verifica contul",
   "4hTtL9": "Verificați-vă contul Telegram",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Nu vom posta niciodată în numele tău.",
   "2Ezyas": "Ce va fi vizibil pe blockchain?",
   "44w6ur": "Numele de utilizator Telegram și ID-ul contului",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Verificați site-ul web",
   "vyn8P": "Introdu mai jos adresa URL a site-ului",
   "2DQDJG": "Ce va fi vizibil pe blockchain?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Nu veți putea câștiga OGN pe Origin, dar vă puteți verifica în continuare profilul.",
   "BfHYB": "sunt sigur",
   "eXPPI": "Nu așteptați",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Câștigă jetoane de origine (OGN), consolidându-ți profilul și completând sarcinile pe piața de origine.",
   "3JfvSq": "Da! Inscrie-ma",
   "wcJnW": "Nu multumesc",
