--- a/shah/translations/tr_TR.json
+++ b/shah/translations/tr_TR.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Tebrikler",
-  "Qsqy": "Profilinizi başarıyla oluşturdunuz. Artık Origin Marketplace'teki işlemlerinize devam edebilirsiniz.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Tamam",
   "yzJlS": "ETH Adresi",
   "1SGynn": "İletişim {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Metamask simgesi, tarayıcı araç çubuğunun sağ üst köşesinde bulunur.",
   "32hLtQ": "Tebrikler! Artık Origin'deki diğer kullanıcılara mesaj atabilir ve tüm alım satımlarınızla ilgili güncel bilgiler alabilirsiniz.",
   "AACIs": "Tamamlandı ve aşağıdaki düğmeye basarak devam edebilirsiniz.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Ocak 2019 Kampanyası",
     "growth.jan2019.short_name": "Ocak 2019",
     "growth.feb2019.name": "Şubat 2019 Kampanyası",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Ekim 2019",
     "growth.nov2019.name": "Kasım 2019 Kampanyası",
     "growth.nov2019.short_name": "Kasım 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Doğrulanmış e-posta ve Menşe profili",
-    "growth.two.attestations.requirement": "İkinci profil doğrulaması",
-    "growth.three.attestations.requirement": "Üçüncü profil doğrulaması",
+    "growth.two.attestations.requirement": "Üçüncü profil doğrulaması",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Profil adı ve fotoğrafı",
     "growth.email.requirement": "Doğrulanmış e-posta",
     "growth.attestation.requirement.twitterAttestation": "Twitter doğrulaması",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Makaleyi oku",
     "growth.share.content20.title": "CoinList Kurucusu Geleceğin Merkezden Arındırılmış Pazarlarını Tartışıyor",
     "growth.share.content20.details": "CoinList'in Kurucu Başkanı ve Başkanı Andy Bromberg, Köken'in ne düşündüğünü ve uzun vadeli vizyonumuzu tartışıyor.",
-    "growth.share.content20.link": "Videoyu izle"
+    "growth.share.content20.link": "Videoyu izle",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Makaleyi oku",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Videoyu izle",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Makaleyi oku",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Videoyu izle",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Videoyu izle"
   },
   "3eD99i": "Eposta adresinizi doğrulayın",
   "1hBrwm": "Profile isim ve fotoğraf ekle",
@@ -321,7 +342,7 @@
   "4qOByY": "Kazanılan",
   "3lytDE": "VİTRİN",
   "2dj9Ax": "Origin Marketplace uygulamasını indirin",
-  "2PC2yI": "Kazanmak için 3 doğrulama yükleyin ve tamamlayın",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Bunu Paylaş",
   "1jzK6G": "Kampanya tespit edilmedi",
   "1bzhfq": "Etkin kampanya bulunamadı",
@@ -633,6 +654,7 @@
   "1YUe0g": "Toplam Kazanç",
   "2tRIOg": "Kampanya tespit edilmedi",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Tamamlandı",
   "2JJkHr": "{amount} OGN kazandınız",
   "1dhANo": "Menşei izleyin",
@@ -677,10 +699,6 @@
   "2jOW7": "Davetiye gönder",
   "2AJXmZ": "Davetiyeleri İzleme",
   "P2wju": "Büyüme kampanyasına kayıt sorunları.",
-  "3YvZxn": "Mesaj imzası başarısız oldu",
-  "3oF2k2": "Tarayıcınız video etiketini desteklemiyor.",
-  "20MH6p": "Meta Maske İmzasını Onayla",
-  "LquQ9": "Metamask tarayıcı uzantınızı açın ve imzanızı onaylayın.",
   "4wsD7C": "{amount} OGN kazandınız",
   "4gJCWE": "Tamamlandı",
   "NZJzc": "Menşei Tanıtın",
@@ -739,6 +757,7 @@
   "157nkC": "Kazanılan OGN, her kampanyanın sonunda dağıtılacak. OGN, Origin platformunda kullanım için kilitlenmiştir ve devredilemez. Gelecekte OGN'nin kilidi açılacak ve aktarılabilir olması beklenmektedir.",
   "4weJUD": "Origin ödülleri programına katılarak, kazanılmış olan kazandığınız Origin Jetonlarını, jetonlarınızı kazanma tarihinden itibaren en az 1 yıl boyunca başkalarına devretmeyeceğinizi veya satmayacağınızı kabul edersiniz.",
   "4vRJSg": "OGN, asıl olarak 1933 tarihli ABD Menkul Kıymetler Yasası uyarınca (“Menkul Kıymetler Yasası”) kayıt altına alınmadan muaf olan bir işlemde yayınlanmaktadır ve ABD'de herhangi bir ABD’ye veya hesabına veya menfaatine ABD’ye devredilemez Menkul Kıymetler Yasası'nın kayıt gerekliliklerinden ve ilgili tüm devlet menkul kıymet yasalarından muaf tutulacak bir kişi hariç. Yukarıda kullanılan terimler, Menkul Kıymetler Yasası altındaki S Yönetmeliğinde ve ilgili tüm yasa ve yönetmeliklerde belirtilen anlamlara sahiptir.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Ben şartları ve koşulları kabul ediyorum",
   "3ARgQ2": "Hata, {country} uygun değil",
   "1gZxpn": "Ne yazık ki, şu anda hükümet yönetmeliklerinin Menşe Kampanyalarına katılmanıza izin vermediği bir ülkedeysiniz.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Hesabı Doğrula",
   "4hTtL9": "Telgraf Hesabınızı Doğrulayın",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Asla sizin adınıza göndermeyeceğiz.",
   "2Ezyas": "Blockchain üzerinde ne görünecek?",
   "44w6ur": "Telegram kullanıcı adınız ve hesap kimliğiniz",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Web Sitesini Doğrula",
   "vyn8P": "Web sitenizin URL adresini aşağıya girin",
   "2DQDJG": "Blockchain üzerinde ne görünecek?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Origin'den OGN kazanamazsınız, ancak profilinizi doğrulayabilirsiniz.",
   "BfHYB": "eminim",
   "eXPPI": "Hayır bekle",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Profilinizi güçlendirerek ve Origin Marketplace'teki görevleri tamamlayarak Origin Tokens (OGN) kazanın.",
   "3JfvSq": "Evet! beni kaydet",
   "wcJnW": "Hayır teşekkürler",
