--- a/shah/translations/vi_VN.json
+++ b/shah/translations/vi_VN.json
@@ -1,6 +1,10 @@
 {
-  "17TFCN": "Chúc mừng",
-  "Qsqy": "Bạn đã tạo profile thành công, tiếp tục khám phá Origin Marketplace ngay hôm nay.",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "Địa chỉ ví ETH",
   "1SGynn": "Liên hệ {role}",
@@ -100,7 +104,7 @@
   "2idJzM": "Biểu tượng Metamask nằm ở phía trên bên phải của thanh công cụ trình duyệt của bạn.",
   "32hLtQ": "Xin chúc mừng! Bây giờ bạn có thể nhắn tin cho những người dùng khác trên Origin và cập nhật tất cả các giao dịch mua và bán của bạn.",
   "AACIs": "Bạn đã hoàn thành và có thể tiếp tục bằng cách nhấn nút bên dưới.",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "Chiến dịch tháng 1 năm 2019",
     "growth.jan2019.short_name": "Tháng 1 năm 2019",
     "growth.feb2019.name": "Chiến dịch tháng 2 năm 2019",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "Tháng 10/2019",
     "growth.nov2019.name": "Chiến dịch tháng 11 năm 2019",
     "growth.nov2019.short_name": "Tháng 11 năm 2019",
+    "growth.dec2019.name": "December 2019 Campaign",
+    "growth.dec2019.short_name": "December 2019",
     "growth.profile.and.email.requirement": "Email được xác minh và hồ sơ gốc",
-    "growth.two.attestations.requirement": "Xác minh hai lớp",
-    "growth.three.attestations.requirement": "Ba xác minh hồ sơ",
+    "growth.two.attestations.requirement": "Ba xác minh hồ sơ",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "Tên và ảnh đại diện",
     "growth.email.requirement": "Email đã xác minh",
     "growth.attestation.requirement.twitterAttestation": "Chứng thực Twitter",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "Đọc bài viết",
     "growth.share.content20.title": "Người sáng lập CoinList thảo luận về các thị trường phi tập trung trong tương lai",
     "growth.share.content20.details": "Andy Bromberg, Đồng sáng lập và Chủ tịch của CoinList thảo luận về những gì ông nghĩ về Origin và tầm nhìn dài hạn của chúng tôi.",
-    "growth.share.content20.link": "Xem video"
+    "growth.share.content20.link": "Xem video",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "Đọc bài viết",
+    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
+    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.link": "Xem video",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "Đọc bài viết",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "Xem video",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "Xem video"
   },
   "3eD99i": "Xác minh địa chỉ email",
   "1hBrwm": "Thêm tên và ảnh đại diện",
@@ -321,7 +342,7 @@
   "4qOByY": "Kiếm được",
   "3lytDE": "ĐẶC SẮC",
   "2dj9Ax": "Tải xuống ứng dụng Origin Marketplace",
-  "2PC2yI": "Cài đặt và hoàn thành 3 xác minh để kiếm tiền",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "Chia sẻ cái này",
   "1jzK6G": "Không có chiến dịch nào được phát hiện",
   "1bzhfq": "Không tìm thấy chiến dịch hoạt động",
@@ -633,6 +654,7 @@
   "1YUe0g": "Tổng số tiền kiếm được",
   "2tRIOg": "Không có chiến dịch nào được phát hiện",
   "3Dcwum": "Origin Marketplace installed",
+  "Nuz99": "Partner Referral",
   "acQDS": "Completed",
   "2JJkHr": "Bạn đã kiếm được {amount} OGN",
   "1dhANo": "Theo nguồn gốc",
@@ -677,10 +699,6 @@
   "2jOW7": "Gửi những lời mời",
   "2AJXmZ": "Theo dõi lời mời",
   "P2wju": "Vấn đề ghi danh vào chiến dịch tăng trưởng.",
-  "3YvZxn": "Chữ ký tin nhắn không thành công",
-  "3oF2k2": "Trình duyệt của bạn không hỗ trợ thẻ video.",
-  "20MH6p": "Xác nhận chữ ký Metamask",
-  "LquQ9": "Mở tiện ích mở rộng trình duyệt Metamask của bạn và xác nhận chữ ký của bạn.",
   "4wsD7C": "Bạn đã kiếm được {amount} OGN",
   "4gJCWE": "Đã hoàn thành",
   "NZJzc": "Quảng bá nguồn gốc",
@@ -739,6 +757,7 @@
   "157nkC": "OGN kiếm được sẽ được phân phối vào cuối mỗi chiến dịch. OGN hiện đang bị khóa để sử dụng trên nền tảng Origin và không thể chuyển được. Dự kiến OGN sẽ được mở khóa và chuyển nhượng trong tương lai.",
   "4weJUD": "Khi tham gia chương trình phần thưởng Origin, bạn đồng ý rằng bạn sẽ không chuyển hoặc bán mã thông báo Origin kiếm được trong tương lai cho người khác trong ít nhất 1 năm kể từ ngày kiếm được mã thông báo của bạn.",
   "4vRJSg": "OGN đang được phát hành trong một giao dịch ban đầu được miễn đăng ký theo Đạo luật Chứng khoán Hoa Kỳ năm 1933, như đã sửa đổi (Đạo luật Chứng khoán Chứng minh), và không được chuyển nhượng tại Hoa Kỳ, hoặc cho tài khoản hoặc lợi ích của bất kỳ Hoa Kỳ nào người ngoại trừ theo quy định miễn trừ có sẵn đối với các yêu cầu đăng ký của Luật Chứng khoán và tất cả các luật chứng khoán nhà nước hiện hành. Các điều khoản được sử dụng ở trên có ý nghĩa được đưa ra trong Quy định S theo Luật Chứng khoán và tất cả các luật và quy định hiện hành.",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "Tôi chấp nhận các điều khoản và điều kiện",
   "3ARgQ2": "Rất tiếc, {country} không đủ điều kiện",
   "1gZxpn": "Thật không may, có vẻ như bạn hiện đang ở một quốc gia nơi các quy định của chính phủ không cho phép bạn tham gia Chiến dịch Xuất xứ.",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "Xác nhận tài khoản",
   "4hTtL9": "Xác minh tài khoản Telegram của bạn",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "Chúng tôi sẽ không bao giờ gửi thay mặt bạn.",
   "2Ezyas": "Điều gì sẽ được hiển thị trên blockchain?",
   "44w6ur": "Tên người dùng và tài khoản Telegram của bạn",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "Xác minh trang web",
   "vyn8P": "Nhập URL trang web của bạn dưới đây",
   "2DQDJG": "Điều gì sẽ được hiển thị trên blockchain?",
@@ -1094,6 +1113,7 @@
   "2dbJQ2": "Bạn sẽ không thể kiếm OGN trên Origin, nhưng bạn vẫn có thể xác minh hồ sơ của mình.",
   "BfHYB": "tôi chắc chắn",
   "eXPPI": "Không chờ đợi",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "Kiếm mã thông báo gốc (OGN) bằng cách củng cố hồ sơ của bạn và hoàn thành các nhiệm vụ trong Thị trường gốc.",
   "3JfvSq": "Đúng! Đăng ký cho tôi",
   "wcJnW": "Không, cám ơn",
