--- a/shah/translations/zh_CN.json
+++ b/shah/translations/zh_CN.json
@@ -1,13 +1,17 @@
 {
-  "17TFCN": "恭喜",
-  "Qsqy": "您已成功创建个人账户，您现在可以继续您的起源应用市场之旅。",
+  "4yVU8h": "Congratulations!",
+  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
+  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
+  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
+  "3Hxe9H": "Collect OGN",
+  "iQsez": "Earn OGN",
   "1IZ5ov": "好",
   "yzJlS": "以太坊地址",
   "1SGynn": "联系{role}",
   "1FAmA3": "评论",
   "2gtpRD": "账户余额",
   "369PK3": "获取更多",
-  "2L5Kd2": "Booked",
+  "2L5Kd2": "已预订",
   "3esZCn": {
     "schema.forSale": "出售",
     "schema.forRent": "出租",
@@ -100,7 +104,7 @@
   "2idJzM": "Metamask 图标在浏览器工具栏的右上角。",
   "32hLtQ": "恭喜！您现在可以在 Origin 上向其他用户发送消息，并跟踪您所有购买和销售情况。",
   "AACIs": "已完成，请点击下面的按钮继续。",
-  "olNLs": {
+  "VoLV1": {
     "growth.jan2019.name": "2019年1月活动",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月活动",
@@ -123,9 +127,11 @@
     "growth.oct2019.short_name": "2019年10月",
     "growth.nov2019.name": "2019年11月的活动",
     "growth.nov2019.short_name": "2019年 11月",
+    "growth.dec2019.name": "2019年12月的活动",
+    "growth.dec2019.short_name": "2019年12月",
     "growth.profile.and.email.requirement": "已验证电子邮件和 Origin 个人资料",
-    "growth.two.attestations.requirement": "两项身份认证",
-    "growth.three.attestations.requirement": "3个个人信息验证",
+    "growth.two.attestations.requirement": "3个个人信息验证",
+    "growth.three.attestations.requirement": "Four profile verifications",
     "growth.profile.requirement": "照片和姓名",
     "growth.email.requirement": "电子邮件已验证",
     "growth.attestation.requirement.twitterAttestation": "推特证明",
@@ -284,7 +290,22 @@
     "growth.share.content19.link": "阅读文章",
     "growth.share.content20.title": "CoinList创始人讨论未来的去中心化市场",
     "growth.share.content20.details": "CoinList的联合创始人兼总裁Andy Bromberg讨论了他对Origin的看法以及我们的长期愿景。",
-    "growth.share.content20.link": "观看视频"
+    "growth.share.content20.link": "观看视频",
+    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
+    "growth.share.content21.link": "阅读文章",
+    "growth.share.content22.title": "一位YouTube早期员如何与Uber和Airbnb竞争",
+    "growth.share.content22.details": "我们的联合创始人Matthew Liu与Encrypted Podcast的联合创始人Ahmed Al-Balaghi对话。",
+    "growth.share.content22.link": "观看视频",
+    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.link": "阅读文章",
+    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.link": "观看视频",
+    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
+    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.link": "观看视频"
   },
   "3eD99i": "验证电子邮件地址",
   "1hBrwm": "将姓名和照片添加到个人资料",
@@ -321,7 +342,7 @@
   "4qOByY": "已获得",
   "3lytDE": "特点",
   "2dj9Ax": "下载 Origin Marketplace 应用 app",
-  "2PC2yI": "下载并且完成3个验证来获得",
+  "3mDuJu": "Install & complete 4 verifications.",
   "14jidi": "分享这个",
   "1jzK6G": "未找到任何奖励活动",
   "1bzhfq": "未找到正在进行的奖励活动",
@@ -360,7 +381,7 @@
   "2EjJhq": "You're not signed in",
   "2eOq3t": "Get secure access to your data by signing with your private key",
   "2CPasx": "加载中...",
-  "136kFa": "Sign In",
+  "136kFa": "登陆",
   "3KIuu2": "您购买了一个列表",
   "4Ey7Uc": "你接受了出价",
   "V0L4d": "你完成了一笔交易",
@@ -632,8 +653,9 @@
   "2haWvO": "总收入",
   "1YUe0g": "赚取总额",
   "2tRIOg": "目前没有奖励活动",
-  "3Dcwum": "Origin Marketplace installed",
-  "acQDS": "Completed",
+  "3Dcwum": "已安装Origin Marketplace",
+  "Nuz99": "Partner Referral",
+  "acQDS": "已完成",
   "2JJkHr": "您已赚取{amount}OGN",
   "1dhANo": "关注Origin",
   "1RMzAE": "返回奖励活动",
@@ -677,10 +699,6 @@
   "2jOW7": "发送邀请函",
   "2AJXmZ": "跟踪邀请函",
   "P2wju": "注册过程中出现问题。",
-  "3YvZxn": "签名不成功",
-  "3oF2k2": "你的浏览器不支持视频标记。",
-  "20MH6p": "确认Metamask签名",
-  "LquQ9": "打开Metamask浏览器插件并确认你的签名。",
   "4wsD7C": "您已赚取{amount}OGN",
   "4gJCWE": "已完成",
   "NZJzc": "推广Origin",
@@ -739,6 +757,7 @@
   "157nkC": "已得到的OGN将会在每个活动结束时被分配。OGN目前被锁在Origin平台上使用并且无法转账。预计OGN将在未来被解锁并可以转账。",
   "4weJUD": "加入Origin奖励活动后，你将同意从你获得Origin代币的日期开始将不会转账或者出售已经获得的Origin代币至少一年。",
   "4vRJSg": "OGN根据遵守《美国证券法》（1933）修正后的交易（“证券法”）的情况下发行，并不得在美国转账或为任何美国人的帐户或利益转让，除非根据《证券法》和所有适用州证券法的注册要求豁免。以上术语具有《证券法》S条例和所有适用法律法规赋予它们的含义。",
+  "1oPDxX": "I am not a citizen or resident of the United States of America",
   "1c8jIG": "我接受以上的条款和条件",
   "3ARgQ2": "抱歉，{country} 不能参与这项活动",
   "1gZxpn": "抱歉，看起来您目前所在的国家政府法规不允许您参与 Origin 奖励活动。",
@@ -808,10 +827,10 @@
   "MdVoC": "Failed to verify status. Please try again.",
   "2PjJHN": "验证账号",
   "4hTtL9": "验证您的电报账号",
+  "2gEaQA": "Telegram verification is only available through the Origin Marketplace app.",
   "2KQpoG": "我们将永远不会代表您发布",
   "2Ezyas": "区块链上会显示什么哪些数据？",
   "44w6ur": "您的Telegram账号用户名和ID",
-  "1oUwGb": "Click 'Verify' to continue",
   "3jUQ7x": "验证您的网址",
   "vyn8P": "在下面输入你的网址",
   "2DQDJG": "区块链上会显示什么哪些数据？",
@@ -833,7 +852,7 @@
   "4zUJH3": "不够Origin代币（OGN)",
   "4Ed2iA": "OKB代币不足。 {=Get More}",
   "4DOKEk": "获取更多",
-  "3as9PZ": "Not enough Tether",
+  "3as9PZ": "Tether不够",
   "49t4a6": "余额不足",
   "2t43zy": "在哪里可以得到一些？",
   "2nApoY": "委任",
@@ -968,9 +987,9 @@
   "349RB": "连接到",
   "4j25sQ": "活跃钱包",
   "2owL8m": "代理账户",
-  "3YmlkH": "No profile created",
-  "1ADqpg": "Create a Profile",
-  "2wdn8N": "Wallet balances",
+  "3YmlkH": "未创建个人资料",
+  "1ADqpg": "创建个人档案",
+  "2wdn8N": "钱包余额",
   "fTgqa": {
     "*": "待批的区块链确认",
     "_1": "待区块链确认"
@@ -1094,11 +1113,12 @@
   "2dbJQ2": "你将无法在 Origin 上赚取 OGN，但你仍然可以验证你的个人档案。",
   "BfHYB": "确定",
   "eXPPI": "不，等一下",
+  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
   "2vReMp": "通过加强您的个人资料并完成“Origin Marketplace”中的任务，赢取原Origin代币(OGN)。",
   "3JfvSq": "我要注册！",
   "wcJnW": "不用了，谢谢",
   "29ZJOe": "获取奖励",
-  "2JzFg1": "Sign In",
+  "2JzFg1": "登陆",
   "4iVrWM": "加载中",
   "4apdzo": "立即推广",
   "1o5hKC": "请输入佣金金额",
@@ -1266,9 +1286,9 @@
   "3szOog": "交易记录状态",
   "2WKBdJ": "我的出售",
   "4sERIr": "已购商品",
-  "4xRYON": "You haven’t bought anything yet.",
+  "4xRYON": "您还没有买任何东西。",
   "2Q96aI": "Browse Listings",
-  "3rqoGs": "{time} ago",
+  "3rqoGs": "{time} 前",
   "1OTyrm": "出价日期",
   "1qsiOA": "所有",
   "3I5PI0": "有效的",
